Save/Update files [ci skip]

--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -1792,18 +1792,18 @@
  china_events.30.b:0 "真の知識とは、自分がどれほど無知であるかを知ることだ。"
  china_events.30.b.tt:0 "いくつかの者は天の[Root.Monarch.GetDaughterSon]には不似合いだとして、古いものとの決別を考えるかもしれません。"
  china_events.31.t:0 "[From.From.GetName]の崩壊"
- china_events.31.d:0 "[From.From.GetName]が倒れ、[Root.Monarch.Dynasty.GetName]王朝が現在、天命の新しい保有者であると信じられている。我々は皇帝の職責を引き継ぎ、中国の人々を繁栄と安定の新しい時代に導くことが期待されている。\n[From.From.GetName]の支配を支持する残党に勝利するには、我々の帝国の官僚制を構築し、強く揺るがぬ国家に投資することである。一方、[Root.Monarch.GetName]は、不道徳な役人が前王朝から継承した組織内にとどまることを懸念するだろう。"
- china_events.31.a:0 "我々が持続的に構築するには慈悲深くなければならない。"
- china_events.31.b:0 "残ったすべての信者を粛清しろ！"
+ china_events.31.d:0 "[From.From.GetName]が倒れ、[Root.Monarch.Dynasty.GetName]王朝が現在、天命の新しい保有者であると信じられている。我々は皇帝の職責を引き継ぎ、中国の人々を繁栄と安定の新しい時代に導くことが期待されている。\n[From.From.GetName]の支配を支持する残党を納得させるには、我々の帝国の官僚制を構築し、強く揺るがぬ国家に投資するべきだ。一方、[Root.Monarch.GetName]は、[Root.Monarch.GetHerHis]から継いだ組織の中に不忠な役人が残り続ける事を懸念している。"
+ china_events.31.a:0 "永続的なものを築くには慈悲深くあらねば。"
+ china_events.31.b:0 "前王朝の支持者は全員粛清しろ！"
  china_events.31.c:0 "帝国の国庫が最初に満たされなければならない。"
  china_events.32.t:0 "[From.From.GetName]帝国の歴史"
  china_events.32.d:1 "[Root.Monarch.GetTitle]、あなたの治世は新たな時代の到来を告げ、[Root.Monarch.Dynasty.GetName]が完全な支配権を獲得すれば、中国は間違いなく長年にわたって繁栄することだろう。おそらく、[From.From.GetName]の帝国を振り返り、歴史の編纂を開始する時が来ている。前王朝の治世全体にわたって中国の繁栄を編纂するにはかなりの金額がかかり、多くの官僚にかなりの時間を割かせることになるが、その利益はコストを上回る可能性がある。"
  china_events.32.da:0 "[Root.Monarch.GetTitle]、あなたの治世は新たな時代の到来を告げ、中国は間違いなく長年にわたって繁栄することだろう。おそらく、[Root.GetName]の帝国を振り返り、歴史の編纂を開始する時が来ている。治世全体にわたって中国の繁栄を編纂するにはかなりの金額がかかり、多くの官僚にかなりの時間を割かせることになるが、その利益はコストを上回る可能性がある。"
  china_events.32.a:0 "時間は最も重要だ！"
  china_events.32.b:0 "支配を固めることに徹底して取り組む。"
- china_events.34.t:0 "学者の仕事場の4つの貴重品"
+ china_events.34.t:0 "文房四宝"
  china_events.34.d:0 "筆、墨、硯と紙を利用し、高貴な社会のすべての紳士に書道の技術が期待されている。しかし、筆記体、行書体、草書体または篆書体といった書体を習得することは、優れた才能の稀有な兆候である。我々の大臣たちの中では、[Root.Adm_Advisor.GetName]が、[Root.Monarch.GetTitle]と[Root.Monarch.GetHerHis]の王朝の栄光のために素晴らしい作品を制作する、熟練した書道家として知られている。\n[Root.Monarch.GetName]は最近、[Root.Monarch.GetHerHis]の[Root.Adm_Advisor.GetTitle]の仕事を詳細に研究し、美しさと優雅な仕事に感銘を受け、この芸術に大きな関心を寄せている。したがって、[Root.Adm_Advisor.GetName]の賞賛された作品の寓話に頻繁に王室の権力への批判が隠されていることを、より身分の低い役人が告白したとき、それは大きな衝撃となった。"
- china_events.34.a:0 "死は[Root.Adm_Advisor.GetHerHim]を待ち構えている。"
+ china_events.34.a:0 "[Root.Adm_Advisor.GetHerHim]には死が待っている。"
  china_events.34.b:0 "[Root.Adm_Advisor.GetHerHim]を殺すことは大きな罪だ。"
  china_events.35.t:0 "国境を守る"
  china_events.35.d:0 "中国の国境を確保するためには、強い軍隊がいつも必要とされてきた。脆弱な時代には、我々の支配の及ばない地域の野蛮人たちは、我々の土地を襲撃したり、侵略したりするのをためらうは決してなかった。\n我々の安全を確保するため、司令官たちは遠征隊を国境地域に派遣し、野蛮人の力を探りながら、我々の力を示すことを求めている。"
