--- a/source/localisation/leviathan_l_english.yml
+++ b/source/localisation/leviathan_l_english.yml
@@ -1186,7 +1186,7 @@
  polynesian.34.a:0 "We will look for a Tufuga fau fale or master house builder."
  polynesian.34.b:0 "A Tufuga fau va'a or master navigator is what we want."
  polynesian.34.c:0 "The job is for a good Tufuga ta tatau or master tattooist."
- polynesian.35.t:0 "The Fa'amatai System"
+ polynesian.35.t:0 "ファアマタイ制"
  polynesian.35.d:0 "The chiefly system or Fa'amatai is a decentralized way of government traditional in Samoa. It allows the Tama-a-Aiga or Sons of the Families, the four major title holders of the islands to lead over the royal families in Samoa. Every ruler of these islands has held one of these titles. This system has granted us a great degree of stability but it is also a block to total power."
  polynesian.35.a:0 "伝統を尊重しよう。"
  polynesian.35.b:0 "この制度は時代遅れであり、我が国益に反するものだ。"
@@ -1224,10 +1224,10 @@
  polynesian.41.t:0 "A Strange Creature"
  polynesian.41.d:0 "Our ruler Lilo has come back from her daily walk around our beautiful island. By her side a small, blueish creature walks clumsily, grabbing her hand. Nobody has ever seen a creature like that, but neither anyone dares to speak about it. The creature cannot stop babbling as if it was plotting something."
  polynesian.41.a:0 "What do the Gods mean with this?"
- polynesian.42.t:0 "Menehune Blessing"
+ polynesian.42.t:0 "メネフネの祝福"
  polynesian.42.d:0 "During the night, our ruler [Root.Monarch.GetName] has been seen entering the woods. Some guards tried to stop [Root.Monarch.GetHerHim], but with a gesture of the hand, [Root.Monarch.GetSheHe] told them to leave [Root.Monarch.GetHerHim] alone. A few hours later, [Root.Monarch.GetSheHe] came back with a big smile in [Root.Monarch.GetHerHis] face.\n'I talked to a Menehune tonight' [Root.Monarch.GetSheHe] claimed. True or false, since that day everything has been better in the realm."
  polynesian.42.a:0 "They exist."
- menehune_blessing_mod:0 "Menehune Blessing"
+ menehune_blessing_mod:0 "メネフネの祝福"
  desc_menehune_blessing_mod:0 "A Menehune has blessed our realm and our rulers."
  polynesian.43.t:0 "A Strange Advisor"
  polynesian.43.d:0 "After a long trip, our queen Moana has come back to our shores accompanied by a tall and muscular man, covered in tattoos. Now, she is always seen in this man's company and apparently listens to his advice. Perhaps it is time to invite him to the court, despite the gossip about him."
@@ -1286,7 +1286,7 @@
  coup_in_palace_events.2.t:0 "陰謀の発覚"
  coup_in_palace_events.2.d:0 "After days of investigation, bribes and threats here and there and countless nights without sleep, the plotters have been discovered and the coup attempt neutralized. Culprits will be sent to the dungeons and finally executed, owing to the fact that traitors deserve nothing else. As in so many cases, the less obvious enemies appear at the top of a conspiracy and hearts are broken in disappointment. 'Tu quoque, Brute, fili mi?'."
  coup_in_palace_events.2.a:0 "裏切り者共を罰し、これに終止符を打つべき時が来た。"
- coup_in_palace_events.3.t:0 "Plot Continues"
+ coup_in_palace_events.3.t:0 "陰謀の継続"
  coup_in_palace_events.3.d:0 "If gossips were quite obvious in the last few weeks, they are deafening in the last days. Some people are not even hiding what they are talking about anymore and simply keep on chatting about it even in our presence. Something big is about to happen and we do not really know what our next step must be. The country is hold in suspense as the feeling that bad things are coming spreads like a wild fire."
  coup_in_palace_events.3.a:0 "What will happen?"
  coup_fails_tooltip:0 "We will manage to neutralize the plot and find the plotters."
@@ -1517,9 +1517,9 @@
  volcano_events.1.d:0 "In the blackness that engulfed the night, fire lit streams copiously gushed down the hill like an open wound, their harsh redness impossible to ignore. A glowing avalanche of volcanic ash followed them like an impatient hunter, its open mouth eager to devour everything in its path until its hunger is finally satiated."
  volcano_events.1.d2:0 "In the blackness that engulfed the night, a thunderous sound could be heard like the mountain's first heartbeat. From its dormant crater a column of ash and smoke rose in fears of being alive - the ecstatic explosion of nature's birth. Incandescent stones were thrown into nearby villages, followed by a glowing avalanche of volcanic ash like an impatient hunter."
  volcano_events.1.a:0 "Nature has punished us."
- monument_events.1.t:0 "Monument in [monument_province.GetName]!"
- monument_events.1.d:0 "The construction of our monument in [monument_province.GetName] has been finally completed! People from all over our nation gather before its imposing figure like curious children. Astounded by its marvel, they rejoice in belonging to [Root.GetName]."
- monument_events.1.a:0 "Today is a day to celebrate."
+ monument_events.1.t:0 "[monument_province.GetName]の歴史的建造物！"
+ monument_events.1.d:0 "ついに歴史的建造物が[monument_province.GetName]で竣工した！その雄姿の前に、まるで好奇心旺盛な子供達の様に国中から人々が群がっている。彼らはこの偉業に驚き、[Root.GetName]に属していることを喜ばしく感じている。"
+ monument_events.1.a:0 "今日は記念日だ。"
  monument_events.2.t:0 "救いの手"
  monument_events.2.d:0 "One of our most famous and respected masons has approached [Root.Monarch.GetName] this morning, stating his concerns about the state of the monument in [monument_province_2.GetName]. \"My dear [Root.Monarch.GetTitle], it breaks my heart to see such a beautiful structure carelessly abandoned, left to face alone the dangers of time and weather. I beg of you, please allow me to help restore it.\""
  monument_events.2.a:0 "We should hire him immediately."
