--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -3697,9 +3697,9 @@
  KILL_RULER_EFFECT:0 "現在の統治者（§Y$NAME$§W）が死去します。\n"
  KILL_LEADER_EFFECT:0 "指揮官§Y$NAME$§Wが死んでしまいます。\n"
  DEFINE_ADMIRAL_EFFECT:1 "提督§Y$NAME$§W（$FIRE$/$SHOCK$/$MANUEVER$/$SIEGE$）が任務に利用できるようになります。\n"
- DEFINE_EXPLORER_EFFECT:1 "探検家§Y$NAME$§W（$FIRE$/$SHOCK$/$MANUEVER$/$SIEGE$）は任務に利用できるようになります。\n"
+ DEFINE_EXPLORER_EFFECT:1 "探検家§Y$NAME$§W（$FIRE$/$SHOCK$/$MANUEVER$/$SIEGE$）が任務に利用できるようになります。\n"
  DEFINE_CONQUISTADOR_EFFECT:1 "征服者§Y$NAME$§W（$FIRE$/$SHOCK$/$MANUEVER$/$SIEGE$）が任務に利用できるようになります。\n"
- DEFINE_GENERAL_EFFECT:1 "将軍§Y$NAME$§W（$FIRE$/$SHOCK$/$MANUEVER$/$SIEGE$）は任務に利用できるようになります。\n"
+ DEFINE_GENERAL_EFFECT:1 "将軍§Y$NAME$§W（$FIRE$/$SHOCK$/$MANUEVER$/$SIEGE$）が任務に利用できるようになります。\n"
  RELEASE_VASSAL_EFFECT:0 "§Y$TARGET$§!は自由な国家となるでしょう。"
  BREAK_UNION_EFFECT:1 "$TARGET|Y$はもはや$SENIOR|Y$と同君連合になることはないでしょう。\n"
  REVOLUTION_WAR_NAME:0 "$ORDER$$FIRST$革命戦争"
@@ -4428,7 +4428,7 @@
  WCRD_GUA:0 "我々は彼らの独立を保障しています。"
  WCRD_VAS:1 "彼らは我々の従属国です。"
  WCRD_WARNING:0 "我々は戦争を開始しないよう$WHO$を警告しています。"
- WCRD_DEFENDER_OF_FAITH:1 "We are the Defender of the Faith, and are obliged to protect them.\n "
+ WCRD_DEFENDER_OF_FAITH:1 "我々は、信仰の擁護者であり、それらを保護する義務があります。\n"
  CANCELMILACCDESC_NOPES_TROOPS:0 "我々がまだ彼らの国境内に軍を持っている間は、通行権をキャンセルすることはできません。"
  CANCELMILACCDESC_NOPES_ENEMY_TROOPS:0 "我々の敵がまだ彼らの国境内に軍を持っている間は、通行権をキャンセルすることはできません。"
  CANCELMILACCDESC_NOPES_ALLY_TROOPS:0 "我々の同盟国がまだ彼らの国境内に軍を持っている間は、通行権をキャンセルすることはできません。"
@@ -6032,7 +6032,7 @@
  PROV_TARIFF_DESCR:0 "関税は、海上交易を通じて得られ、母国に戻される税額の一部です。あなたが交易を保護するためには大きな艦隊が必要です。"
  PROV_TARIFF_S_DESCR:0 "海外の場合は関税が収集されます。"
  TARIFF_FACTOR:0 "関税が得られます："
- TARIFF_EFF:3 "Current Tariff rate is §Y$EFF|%1$§W.\n\n"
+ TARIFF_EFF:3 "現在の関税率は§Y$EFF|%1$§Wです。\n\n"
  NO_TARIFF_HERE:0 "関税は海外の領土からのみ得られます。"
  UNIT_ENABLE_PATROL:0 "巡回中ではありません"
  UNIT_DISABLE_PATROL:0 "巡回中です"
@@ -6989,8 +6989,8 @@
  NEW_CARDINAL_EXPL:0 "$NEW$が彼の後ろで糸を引いています。"
  NEW_CARDINAL_EXPL_OURS:0 "取り決めにおいて、我々はいくらかの教皇への影響力が必要なものの、彼は我々に忠実です。"
  HRE_INFLUENCE_DESC:1 "帝国の権威は帝国諸侯に及ぼす皇帝の支配力を表します。権威は神聖ローマ帝国改革の制定に必要です。高い権威はより多くの国が帝国に加盟することを促進するでしょう。"
- HRE_INFLUENCE_GAIN:1 "Gained by:\n - Having a large amount of member states\n - The member states being at peace\n - Countries joining the Empire\n - Successive Emperors from the same country\n - Emperor voting with the majority of princes in HRE incidents"
- HRE_INFLUENCE_LOSS:1 "Lost by:\n - Dishonoring the Calls of members\n - Provinces leaving the Empire\n - Imperial territory under the control of foreign states\n - Imperial territory under the control of heathens and heretics\n - Having less than 7 electors\n - Emperor voting with the minority of princes in HRE incidents"
+ HRE_INFLUENCE_GAIN:1 "増加要因：\n－多くの加盟国を持つ\n－加盟国が平和である\n－帝国に州が加わる\n－皇帝位が同じ国に継承される\n－皇帝が帝国事件で多数派と同じ投票をする"
+ HRE_INFLUENCE_LOSS:1 "減少要因：\n－加盟国の参戦要請を拒否する\n－帝国から州が離脱する\n－帝国領土が他国に支配される\n－帝国領土が異教徒や異端に支配される\n－選帝候の数が7未満\n－皇帝が帝国事件で少数派と同じ投票をする"
  PAPAL_INF_LESS_THAN:0 "教皇への影響力が右記未満である："
  PAPAL_INF_AT_LEAST:0 "教皇への影響力が右記以上である："
  INVESTED_PAPAL_INF_LESS_THAN:0 "投資した教皇への影響力が右記未満である："
@@ -7058,12 +7058,12 @@
  HRE_MAJORITY:0 "ほとんどの神聖ローマ帝国加盟国"
  ICON_RELIGIOUS_UNITY:0 "§Y宗教的団結§Wへの要求"
  BORN_IN:0 "$COUNTRY$に誕生。"
- HAD_COUNTRY_FLAG_LESS_THAN:1 "Had country flag '§Y$FLAG$§W' for less than §Y$DAYS$§W days (Current: $CURRENT|Y$)"
+ HAD_COUNTRY_FLAG_LESS_THAN:1 "国家フラグ「§Y$FLAG$§W」を§Y$DAYS$§W日未満持った（現在：$CURRENT|Y$）"
  HAD_COUNTRY_FLAG_AT_LEAST:1 "Had country flag '§Y$FLAG$§W' for at least §Y$DAYS$§W days (Current: $CURRENT|Y$)"
- HAD_GLOBAL_FLAG_LESS_THAN:1 "Had global flag '§Y$FLAG$§W' for less than §Y$DAYS$§W days (Current: $CURRENT|Y$)"
- HAD_GLOBAL_FLAG_AT_LEAST:1 "Had global flag '§Y$FLAG$§W' for at least §Y$DAYS$§W days (Current: $CURRENT|Y$)"
- HAD_PROVINCE_FLAG_LESS_THAN:1 "Had province flag '§Y$FLAG$§W' for less than §Y$DAYS$§W days (Current: $CURRENT|Y$)"
- HAD_PROVINCE_FLAG_AT_LEAST:1 "Had province flag '§Y$FLAG$§W' for at least §Y$DAYS$§W days (Current: $CURRENT|Y$)"
+ HAD_GLOBAL_FLAG_LESS_THAN:1 "グローバルフラグ「§Y$FLAG$§W」を§Y$DAYS$§W日未満持った（現在：$CURRENT|Y$）"
+ HAD_GLOBAL_FLAG_AT_LEAST:1 "グローバルフラグ「§Y$FLAG$§W」を§Y$DAYS$§W日以上持った（現在：$CURRENT|Y$）"
+ HAD_PROVINCE_FLAG_LESS_THAN:1 "州フラグ「§Y$FLAG$§W」を§Y$DAYS$§W日未満持った（現在：$CURRENT|Y$）"
+ HAD_PROVINCE_FLAG_AT_LEAST:1 "州フラグ「§Y$FLAG$§W」を§Y$DAYS$§W日以上持った（現在：$CURRENT|Y$）"
  NOCLAIMWENOTMONARCHY:0 "君主だけが王位を主張できます！"
  NOCLAIMTHEYNOTMONARCHY:0 "彼らは君主制ではありません"
  NOCLAIMNOTSAMEDYNASTY:0 "我々は彼らと同じ支配的な王朝を持っていません"
@@ -7687,9 +7687,9 @@
  CURRENT_FERVOR:0 "$WHO$は現在、$VAL|Y$点の情熱を持っています。最大量は$MAX|Y$点です。"
  START_PRIVATEER_MISSION:0 "私掠船"
  START_PRIVATEER_MISSION_DESC:0 "私掠任務の艦隊は、海賊旗の下で航行し、交易ノードの他の国々から交易力を奪うでしょう。"
- START_AUTO_TRANSFER_MODE:0 "§Y自動輸送許可§!"
+ START_AUTO_TRANSFER_MODE:0 "§Y自動輸送を許可する§!"
  AUTO_TRANSFER_MODE_DESC:0 "自動輸送が許可されている場合、その艦船は自動的に海外への移動を必要とするあなたの陸上部隊の輸送に使用されます。"
- STOP_AUTO_TRANSFER_MODE:0 "§Y自動輸送禁止§!\n"
+ STOP_AUTO_TRANSFER_MODE:0 "§Y自動輸送を禁止する§!\n"
  CANT_SPLIT_WHILE_TRANSFER:0 "自動輸送任務中の艦船ユニットは分割や結合はできません。"
  CANT_SPLIT_WHILE_EXPLORING:0 "探検中の艦隊を分割することはできません。"
  CANT_SPLIT_WHILE_LOCKED:0 "移動経路の中間点を超えたユニットは分割や結合はできません（または部隊の輸送中）。"
@@ -7963,8 +7963,8 @@
  LEADER_NAME:0 "指揮官名"
  CANT_PROMOTE_ADVISOR_MAX_SKILL:0 "あなたはこれ以上この顧問を昇進させることはできません。"
  CANT_PROMOTE_ADVISOR_NO_FUNDS:0 "あなたはこの顧問を昇進させる余裕はありません。それはあなたに§Y$PROMOTE_COST$§W¤のコストがかかります。"
- CANT_PROMOTE_ADVISOR_WRONG_CULTURE:2 "You cannot promote this advisor.\nThis Advisor's Culture is not one of your Promoted Cultures."
- PROMOTE_ADVISOR:1 "Promote this Advisor.\nThis will cost you §Y$PROMOTE_COST$§W¤, increase his salary to §Y$NEW_WAGE_COST$§W¤ per month and will permanently increase this Advisor's skill by §G1§W."
+ CANT_PROMOTE_ADVISOR_WRONG_CULTURE:2 "この顧問を昇進させることはできません。\nこのアドバイザーの文化は、あなたの登用した文化の一つではありません。"
+ PROMOTE_ADVISOR:1 "この顧問を昇進させます。\nこれには§Y$PROMOTE_COST$§W¤のコストがかかり、給料が月§Y$NEW_WAGE_COST$§W¤増える代わりに、この顧問のスキルを恒久的に§G1§W向上させます。"
  CONFIRM_PROMOTE_ADVISOR:0 "あなたの顧問である$NAME$を§Y$PROMOTE_COST$§W¤のコストで昇進させてもよろしいですか？これは、この顧問のスキルを恒久的に§G1§W向上させます。"
  CONFIRM_PROMOTE_ADVISOR_TITLE:0 "顧問の昇進"
  DATE_IS_BEFORE:0 "右記より前である："
@@ -8127,10 +8127,10 @@
  CONNECT_TO_SHIP_LOW_MORALE:0 "ユニットの士気が低下しています。"
  FE_IRONMAN_GAMENOTOK:0 "鉄人モードにはMODが導入されていない有効なEU4が必要です。"
  war_canoe:0 "戦闘用カヌー"
- BLOCKADE_POWER:0 "Blockade Power"
- LEDGER_BLPW:0 "Blockade"
- BLOCKADE_PENALTY_ALL:0 "All ports are blockaded"
- BLOCKADE_PENALTY_NONE:0 "No ports are blockaded"
- CARPET_SIEGE_AREAS:0 "Areas to Carpet Siege"
- MANAGE_CARPET_SIEGE:0 "§YManage Autonomous Carpet Sieging§!"
- CARPET_SIEGE_DESC:0 "Armies under orders to carpet siege will attempt to siege any provinces under control by enemies, while avoiding combat."
+ BLOCKADE_POWER:0 "封鎖力"
+ LEDGER_BLPW:0 "海上封鎖"
+ BLOCKADE_PENALTY_ALL:0 "全ての港が封鎖された"
+ BLOCKADE_PENALTY_NONE:0 "封鎖されている港はない"
+ CARPET_SIEGE_AREAS:0 "絨毯包囲地域"
+ MANAGE_CARPET_SIEGE:0 "§Y絨毯包囲管理§!"
+ CARPET_SIEGE_DESC:0 "絨毯包囲を命じられた軍隊は、戦闘を避けながら敵の支配下にある州の包囲を試みます。"
