--- a/source/localisation/tmm_l_english.yml
+++ b/source/localisation/tmm_l_english.yml
@@ -94,7 +94,7 @@
  SPECIFIC_BUILDING_CONSTRUCTION:1 "constructing a $BUILDING$"
  CANAL_TYPE_NAME:0 "運河"
  MONUMENT_TYPE_NAME:0 "記念碑"
- GREAT_PROJECT_UPGRADE_CONSTRUCTION_DESC:0 "The $TYPE$ upgrade for $NAME|Y$ will be done on $DATE$"
+ GREAT_PROJECT_UPGRADE_CONSTRUCTION_DESC:0 "$NAME|Y$のための$TYPE$をアップグレードは$DATE$に完了します"
  UPGRADE_GREAT_PROJECT:0 "$TYPE$$NAME|Y$のアップグレードを開始します。"
  hagia_sophia:0 "ハギア・ソフィア"
  stonehenge:0 "ストーンヘンジ"
@@ -117,24 +117,24 @@
  CANCEL_GREAT_PROJECT_IN_SUBJECT:0 "Construction of a $TYPE$ was canceled"
  CANCEL_GREAT_PROJECT_IN_SUBJECT_WHAT:0 "to cease construction of a $TYPE$ in our country"
  CANCEL_GREAT_PROJECT_IN_SUBJECT_EFFECT:0 "The work on building a $BUILDING|Y$ in $PROVINCE$ has stopped."
- CANCEL_GREAT_PROJECT_PROGRESS:0 "Are you sure you wish to cancel $BUILDING$ from being built in $PROVINCE$? $PERCENTAGE_RETURNED|%1Y$ of the investment will be returned."
- CONFIRMGREATPROJECTUPGRADETITLE:0 "Confirm upgrade."
- CONFIRMGREATPROJECTUPGRADETEXTLEDGER:0 "Are you sure you wish to upgrade $GREATPROJECT|Y$ in $PROVINCE$?"
- CONFIRMGREATPROJECTUPGRADEDESC:0 "This will cost $COST|Y$¤ and provide the following benefits:\n$BENEFITS$"
- CANCEL_GREAT_PROJECT_UPGRADE:0 "Cancel upgrade."
- CANCEL_GREAT_PROJECT_UPGRADE_IN_SUBJECT:0 "Upgrade of a $TYPE$ was canceled"
- CANCEL_GREAT_PROJECT_UPGRADE_IN_SUBJECT_WHAT:0 "to cease the upgrade of a $TYPE$ in our country"
- CANCEL_GREAT_PROJECT_UPGRADE_IN_SUBJECT_EFFECT:0 "The work on upgrading a $BUILDING|Y$ in $PROVINCE$ has stopped."
- CANCEL_GREAT_PROJECT_UPGRADE_PROGRESS:0 "Are you sure you wish to cancel $BUILDING$ from being upgraded in $PROVINCE$? $PERCENTAGE_RETURNED|%1Y$ of the investment will be returned."
- SPEND_MANPOWER_TO_BOOST_PROGRESS:0 "Use §Y$NUMBER$§W manpower to bring the project forward by $DAYS|Y$ days"
- SPEND_MONEY_TO_BOOST_PROGRESS:0 "Use §Y$COST$§W¤ to bring the project forward by $DAYS|Y$ days"
- CANNOT_SPEND_MANPOWER_TO_BOOST_PROGRESS_NOT_ENOUGH_MANPOWER:0 "You do not have enough manpower to boost progress."
- CANNOT_SPEND_MONEY_TO_BOOST_PROGRESS_NOT_ENOUGH_CASH:0 "You do not have enough money to boost progress."
- CANNOT_UPGRADE_GREAT_PROJECT_ALREADY_AT_MAX:0 "This $TYPE$ cannot be upgraded any further, it is already as good as it can get."
- CANNOT_BOOST_PROGRESS_NO_CONSTRUCTION:0 "No construction is underway to boost progress."
- CONFIRMGREATPROJECT_BOOST_TITLE:0 "Confirm construction boost."
- CONFIRMGREATPROJECT_BOOST_MANPOWER_TEXT:0 "Are you sure you wish to spend $MANPOWER$ manpower to bring forward completion by $DAYS$ days?"
- CONFIRMGREATPROJECT_BOOST_MONEY_TEXT:0 "Are you sure you wish to spend $COST|Y$¤ to bring forward completion by $DAYS$ days?"
+ CANCEL_GREAT_PROJECT_PROGRESS:0 "$PROVINCE$における$BUILDING$の建設をキャンセルしてもよろしいですか？投資額の$PERCENTAGE_RETURNED|%1Y$が返還されます。"
+ CONFIRMGREATPROJECTUPGRADETITLE:0 "アップグレードの確認。"
+ CONFIRMGREATPROJECTUPGRADETEXTLEDGER:0 "$PROVINCE$の$GREATPROJECT|Y$をアップグレードしてよろしいですか？"
+ CONFIRMGREATPROJECTUPGRADEDESC:0 "これには$COST|Y$¤を消費し、以下のボーナスが得られます：\n$BENEFITS$"
+ CANCEL_GREAT_PROJECT_UPGRADE:0 "アップグレードをキャンセルする。"
+ CANCEL_GREAT_PROJECT_UPGRADE_IN_SUBJECT:0 "$TYPE$のアップグレードはキャンセルされた"
+ CANCEL_GREAT_PROJECT_UPGRADE_IN_SUBJECT_WHAT:0 "$TYPE$のアップグレードを停止します"
+ CANCEL_GREAT_PROJECT_UPGRADE_IN_SUBJECT_EFFECT:0 "$PROVINCE$における$BUILDING|Y$のアップグレードの作業は停止した。"
+ CANCEL_GREAT_PROJECT_UPGRADE_PROGRESS:0 "$PROVINCE$における$BUILDING$のアップグレードをキャンセルしてもよろしいですか？投資額の$PERCENTAGE_RETURNED|%1Y$が返還されます。"
+ SPEND_MANPOWER_TO_BOOST_PROGRESS:0 "プロジェクトを$DAYS|Y$日進めるために人的資源を§Y$NUMBER$§W使用する"
+ SPEND_MONEY_TO_BOOST_PROGRESS:0 "プロジェクトを$DAYS|Y$日進めるために§Y$COST$§W¤使用する"
+ CANNOT_SPEND_MANPOWER_TO_BOOST_PROGRESS_NOT_ENOUGH_MANPOWER:0 "進捗を進めるのに十分な人的資源を保有していません。"
+ CANNOT_SPEND_MONEY_TO_BOOST_PROGRESS_NOT_ENOUGH_CASH:0 "進捗を進めるのに十分な資金を保有していません。"
+ CANNOT_UPGRADE_GREAT_PROJECT_ALREADY_AT_MAX:0 "この$TYPE$は既に最良であり、さらにアップグレードすることはできません。"
+ CANNOT_BOOST_PROGRESS_NO_CONSTRUCTION:0 "建設中の建物はありません。"
+ CONFIRMGREATPROJECT_BOOST_TITLE:0 "建設加速の確認"
+ CONFIRMGREATPROJECT_BOOST_MANPOWER_TEXT:0 "プロジェクトを$DAYS$日進めるために人的資源を$MANPOWER$使用してもよろしいですか？"
+ CONFIRMGREATPROJECT_BOOST_MONEY_TEXT:0 "プロジェクトを$DAYS$日進めるために$COST|Y$¤使用してもよろしいですか？"
  BUILD_GREAT_PROJECT:0 "$TYPE$$NAME|Y$の建設を開始します。"
  TIER_0_DESCRIPTION:0 "無価値"
  TIER_1_DESCRIPTION:0 "魅力的"
@@ -147,7 +147,7 @@
  ON_UPGRADED_EVENT_DESC:0 "§YWhen upgraded§!:\n$EFFECT$\n"
  EXPENSEGREATPROJECTS:0 "Great Projects"
  EXPENSEGREATPROJECTMAINTENANCE:0 "Great Project Maintenance"
- CANNOT_BOOST_PROGRESS_FINISHED:0 "The construction is already completed."
+ CANNOT_BOOST_PROGRESS_FINISHED:0 "建設は完了しています。"
  GREAT_PROJECT_DESCRIPTION:0 "$TYPE$: $NAME|Y$"
  CONFIRMGREATPROJECT_MOVE_TITLE:0 "Confirm move."
  CONFIRMGREATPROJECT_MOVE_TEXT:0 "Are you sure you wish to move $GREATPROJECT|Y$ to $PROVINCE$?"
@@ -172,11 +172,11 @@
  great_project_can_be_built_instant:0 "Great Project(s) can be built"
  great_project_can_be_built_delayed:0 "The following Great Project(s) can be built:\n$LIST$"
  enemy_invasion_imminent_instant:0 "差し迫った敵の侵攻"
- enemy_invasion_imminent_delayed:0 "The following enemy navies may disembark troops into your provinces:\n$LIST$"
- homepage_button_tooltip:0 "Go to EUIV homepage"
- forum_button_tooltip:0 "Go to EUIV forums"
- facebook_button_tooltip:0 "Go to EUIV Facebook Page"
- twitter_button_tooltip:0 "Go to EUIV Twitter page"
+ enemy_invasion_imminent_delayed:0 "以下の敵艦隊があなたの州に対し軍隊を下船させている：\n$LIST$"
+ homepage_button_tooltip:0 "EUIVのホームページに移動する"
+ forum_button_tooltip:0 "EUIVのフォーラムに移動する"
+ facebook_button_tooltip:0 "EUIVのFacebookページに移動する"
+ twitter_button_tooltip:0 "EUIVのTwitterページに移動する"
  MACRO_REQUIREMENT_NOT_FULFILLED_GREAT_PROJECT:0 "These benefits cannot be used because the requirements for the $TYPE$ $BUILDING$ are not fulfilled for this province."
  FORT_MAINTENANCE_LOCK_NONC:0 "Maintenance lock can only be toggled on forts you control, as those are the only ones you pay money for."
  FORT_MAINTENANCE_LOCK_SIEGE:0 "Maintenance lock cannot be toggled when the province is under siege!"
@@ -218,45 +218,45 @@
  CONFIRM_CONSOLIDATE_DEVELOPMENT_TITLE:1 "領土の開発度を集中"
  CONFIRM_CONSOLIDATE_DEVELOPMENT_TEXT:1 "Channel development from $NAME$ for our own needs. This state will lose $DEVELOPMENT|Y$ development. Much of the development lost will end up in our capital, some will be distributed amongst our other states, some will be lost. In total, we will gain $DEVGAINED|Y$ development."
  CONFIRM_CONSOLIDATE_DEVELOPMENT_SUBJECT:0 "This will have the following effects on your subjects:"
- CONFIRM_CONSOLIDATE_DEVELOPMENT_SUBJECT_EFFECT:0 "  $SUBJECT|Y$:\n    Liberty Desire: $LIBERTYDESIRE|R$\n    Opinion: $OPINION|R$"
- NO_CONSOLIDATION_POSSIBLE:1 "Development cannot be concentratated from here."
- CANT_CONSOLIDATE_DEVELOPMENT_COOLDOWN:1 "You cannot concentratate development from this state again until $DATE$"
+ CONFIRM_CONSOLIDATE_DEVELOPMENT_SUBJECT_EFFECT:0 "$SUBJECT|Y$：\n独立欲求：$LIBERTYDESIRE|R$\n評価：$OPINION|R$"
+ NO_CONSOLIDATION_POSSIBLE:1 "この場所から開発度の集中を行うことはできません。"
+ CANT_CONSOLIDATE_DEVELOPMENT_COOLDOWN:1 "$DATE$まで、このステートから開発度の集中を行うことはできません"
  crown_colony:0 "直轄植民地"
- crown_colony_long_desc:0 "A Crown Colony has a high amount of direct control from the overlord. They contribute a good amount of money and manpower."
+ crown_colony_long_desc:0 "直轄植民地は宗主国の直接統治の度合いが高い植民地です。この植民地は金と人的資源を多量供給します。"
  crown_colony_title:0 "直轄植民地"
  crown_colony_title_plural:0 "直轄植民地"
  crown_colony_overlord:0 "Crown Colony Overlord"
  crown_colony_subject:0 "Crown Colony Subject"
- crown_colony_is_our:0 "§Y$NAME$§! is our Crown Colony."
+ crown_colony_is_our:0 "§Y$NAME$§!は我々の直轄植民地です。"
  private_enterprise:0 "私企業"
- private_enterprise_long_desc:0 "A Private Enterprise will focus on getting extra monetary value out of the land and bringing that home to the overlord."
+ private_enterprise_long_desc:0 "私企業は領土からより多くの金銭的価値を得て、宗主国へ持ち帰ることに注力します。"
  private_enterprise_title:0 "私企業"
  private_enterprise_title_plural:0 "私企業"
  private_enterprise_overlord:0 "Private Enterprise Overlord"
  private_enterprise_subject:0 "Private Enterprise Subject"
- private_enterprise_is_our:0 "§Y$NAME$§! is our Private Enterprise."
+ private_enterprise_is_our:0 "§Y$NAME$§!は私企業です。"
  self_governing_colony:0 "自治植民地"
- self_governing_colony_long_desc:0 "A Self-Governing Colony will focus on cultivating and improving the land. They will have a higher liberty desire than any other type of colony, but will be able to expand and develop faster."
+ self_governing_colony_long_desc:0 "自治植民地は、領土を開拓し改良することに注力します。この植民地は他のタイプより高い独立欲求を持ちますが、より早く領土を拡大し開発することが可能です。"
  self_governing_colony_title:0 "自治植民地"
  self_governing_colony_title_plural:0 "自治植民地"
  self_governing_colony_overlord:0 "Self-Governing Colony Overlord"
  self_governing_colony_subject:0 "Self-Governing Colony Subject"
- self_governing_colony_is_our:0 "§Y$NAME$§! is our Self-Governing Colony."
+ self_governing_colony_is_our:0 "§Y$NAME$§!は自治植民地です。"
  COLONY_OVERLORD_EFFECTS_TOOLTIP:0 "This will have the following effects on the overlord nation:\n"
- COLONY_LAND_FORCE_LIMIT_BONUS:0 "Land Force Limit Bonus: $BONUS|G$§G%§W of colony"
- COLONY_NAVAL_FORCE_LIMIT_BONUS:0 "Naval Force Limit Bonus: $BONUS|G$§G%§W of colony"
- COLONY_MANPOWER_BONUS:0 "Manpower bonus: $BONUS|G$§G%§W of colony"
- COLONY_SAILORS_BONUS:0 "Sailors bonus: $BONUS|G$§G%§W of colony"
+ COLONY_LAND_FORCE_LIMIT_BONUS:0 "植民地の陸軍扶養限界ボーナス：$BONUS|G$§G％§W"
+ COLONY_NAVAL_FORCE_LIMIT_BONUS:0 "植民地の海軍扶養限界ボーナス：$BONUS|G$§G％§W"
+ COLONY_MANPOWER_BONUS:0 "植民地の人的資源ボーナス：$BONUS|G$§G％§W"
+ COLONY_SAILORS_BONUS:0 "植民地の水兵ボーナス：$BONUS|G$§G％§W"
  COLONY_SUBJECT_EFFECTS_TOOLTIP:0 "And the following effects on the colony:"
- CHANGE_COLONIAL_TYPE:0 "Change Colonial Type"
- CHANGE_COLONIAL_TYPE_EFFECT:0 "$SUBJECT$ will become a $SUBJECTTYPE$."
+ CHANGE_COLONIAL_TYPE:0 "植民地タイプの変更"
+ CHANGE_COLONIAL_TYPE_EFFECT:0 "$SUBJECT$は$SUBJECTTYPE$となる。"
  CHANGE_COLONIAL_TYPE_WHAT:0 "to change their colonial type."
- CHANGE_COLONIAL_TYPE_DESC:0 "Change Colonial Type from $SUBJECTTYPE$."
+ CHANGE_COLONIAL_TYPE_DESC:0 "$SUBJECTTYPE$からタイプを変更します。"
  MODIFIER_COLONIAL_TYPE_CHANGE_COST_MODIFIER:0 "Colonial Type Change Cost Modifier"
  CANT_CHANGE_COLONIAL_TYPE_NOT_COLONY:0 "Subject is not a colony"
- CANT_CHANGE_COLONIAL_TYPE_COOLDOWN:0 "You cannot change the colonial relationship until $DATE$"
- CANT_CHANGE_COLONIAL_TYPE_ALREADY_IS:0 "Subject is already a $SUBJECTTYPE$"
- CANT_CHANGE_COLONIAL_TYPE_NOT_ENOUGH_CASH:0 "You cannot afford the $COST$¤ required"
+ CANT_CHANGE_COLONIAL_TYPE_COOLDOWN:0 "$DATE$まで植民地との関係を変更することはできません。"
+ CANT_CHANGE_COLONIAL_TYPE_ALREADY_IS:0 "従属国は既に$SUBJECTTYPE$です"
+ CANT_CHANGE_COLONIAL_TYPE_NOT_ENOUGH_CASH:0 "$COST$¤所持していません。"
  MODIFIER_COLONIAL_SUBJECT_TYPE_UPGRADE_COST_MODIFIER:0 "Colonial Subject Type Upgrade Cost Modifier"
  COLONY_UPGRADE_EFFECTS_TOOLTIP:0 "On activating the upgrade:"
  UPGRADE_SUBJECT_TYPE:0 "Modify Subject Relationship"
@@ -269,17 +269,17 @@
  UPGRADE_SUBJECT_TYPE_SPECIFIC_DESC:0 "Add the subject relationship upgrade $SUBJECTTYPEUPGRADE$.\nThis will cost §Y$COST$§W¤."
  increased_force_limit_from_colony:0 "Increased Force Limit From Colony"
  CANT_CONSOLIDATE_DEVELOPMENT_NEED_DLC:0 "Leviathan DLCが必要です"
- CONSOLIDATE_DEVELOPMENT_FROM_SUBJ:1 "$STATE$ will be pillaged by $TAKER$, changing Liberty Desire of $GIVER$% by $LD|-$."
- CONSOLIDATE_DEVELOPMENT_FROM_OTHER_NATION:0 "$STATE$ will be pillaged by $TAKER$."
- PEACE_PILLAGE_CAPITAL_STATE:0 "@$TAKERFLAG$ Pillage @$GIVERFLAG$ Capital"
- capital_state_pillaged_by_rival:0 "$TARGET$ pillaged our capital"
+ CONSOLIDATE_DEVELOPMENT_FROM_SUBJ:1 "$STATE$は$TAKER$から収奪され、$LD|-$によって$GIVER$%の独立欲求が増えます。"
+ CONSOLIDATE_DEVELOPMENT_FROM_OTHER_NATION:0 "$STATE$は$TAKER$に収奪されるでしょう。"
+ PEACE_PILLAGE_CAPITAL_STATE:0 "@$TAKERFLAG$が@$GIVERFLAG$の首都を略奪"
+ capital_state_pillaged_by_rival:0 "$TARGET$は自国の首都を収奪した"
  PEACE_PILLAGE_CAPITAL_STATE_DESC:0 "$TAKER$ pillages $GIVER$ capital state"
  PILLAGE_CAPITAL_CANNOT_DONT_OCCUPY:0 "$CAPITAL|Y$ is not occupied by $TAKER|Y$ or one of its subjects."
  PILLAGE_CAPITAL_CANNOT_NO_VALID_PROVINCES:0 "All provinces in the capital area have been taken."
  NUM_OF_TIMES_PILLAGED_CAPITAL_STATE:1 "Number of times used 'Pillage capital state' in a peace treaty"
  NUM_OF_TIMES_CONCENTRATED_DEVELOPMENT:0 "開発の集中の実施回数"
- COUNTRY_HAS_PILLAGED_CAPITAL_STATE_OF:0 "$SCOPECOUNTRY|Y$ has pillaged the capital state of $OTHERCOUNTRY$.\n"
- COUNTRY_HAS_NOT_PILLAGED_CAPITAL_STATE_OF:0 "$SCOPECOUNTRY|Y$ has not pillaged the capital state of $OTHERCOUNTRY$.\n"
+ COUNTRY_HAS_PILLAGED_CAPITAL_STATE_OF:0 "$SCOPECOUNTRY|Y$が$OTHERCOUNTRY$に対して首都の収奪を行った。\n"
+ COUNTRY_HAS_NOT_PILLAGED_CAPITAL_STATE_OF:0 "$SCOPECOUNTRY|Y$は$OTHERCOUNTRY$に対して首都の収奪を行ったことがない。\n"
  CANNOT_EXTEND_REGENCY_SUBJECT:0 "Cannot extend your overlord's regency!"
  CANNOT_EXTEND_REGENCY_NOT_REGENT:1 "You are not currently in a Regency!"
  CANNOT_EXTEND_REGENCY_NOT_MONARCHY:0 "You can only extend a regency for an Heir in a Monarchy!"
@@ -288,14 +288,14 @@
  EXTEND_REGENCY_PERFORM:0 "Extend the regency for $HEIR|Y$ by $YEARS$ years.\nThis will give a hit of $LEGITIMACY_HIT|R$ legitimacy from this action."
  EXTEND_REGENCY_TITLE:0 "Extend Regency!"
  COUNTRY_HAS_BEEN_PILLAGED_TITLE:0 "Capital Pillaged!"
- COUNTRY_HAS_BEEN_PILLAGED_SETUP:0 "When our capital state is pillaged."
+ COUNTRY_HAS_BEEN_PILLAGED_SETUP:0 "自国の首都が収奪された時。"
  COUNTRY_HAS_BEEN_PILLAGED_HEADER:0 "Our Governor Reports"
  COUNTRY_HAS_BEEN_PILLAGED_1:0 "Terrible News!"
  COUNTRY_HAS_BEEN_PILLAGED_2:0 "Our capital state $STATE$"
- COUNTRY_HAS_BEEN_PILLAGED_3:0 "has been pillaged by the ruthless"
+ COUNTRY_HAS_BEEN_PILLAGED_3:0 "冷酷な者たちに収奪された"
  COUNTRY_HAS_BEEN_PILLAGED_4:0 "§Y$ACTUALTAKER$§!"
  COUNTRY_HAS_BEEN_PILLAGED_5:0 "They have carried off $DEV$ development."
- COUNTRY_HAS_BEEN_PILLAGED_LOG:0 "Our capital state has been pillaged."
+ COUNTRY_HAS_BEEN_PILLAGED_LOG:0 "自国の首都は収奪を受けた。"
  COUNTRY_HAS_BEEN_PILLAGED_BTN1:0 "OK"
  COUNTRY_HAS_BEEN_PILLAGED_BTN2:0 "OK"
  COUNTRY_HAS_BEEN_PILLAGED_BTN3:0 "Go to"
@@ -851,7 +851,7 @@
  CLICK_TO_PICK_ANCESTOR:0 "Click to pick $WHO|Y$ as your ancestor."
  CANNOT_CARPET_SIEGE_NO_AVAILABLE_PROVINCES:0 "No available provinces to siege."
  SELECT_CARPET_AREA:0 "Click to select $AREA|Y$ for Carpet Sieging."
- CANNOT_PROVINCE_IS_BEING_PILLAGED:0 "$PROVINCE|Y$ is already being pillaged."
+ CANNOT_PROVINCE_IS_BEING_PILLAGED:0 "$PROVINCE|Y$は既に収奪された後だ。"
  MAY_BUILD_FLAGSHIPS:0 "May Build Flagships"
  MAY_BUILD_FLAGSHIPS_SHORT:0 "Build Flagships"
  FREE_MERCHANT_DESC:0 "Your Merchants can be used to divert trade from Trade Nodes where you have Trade Power in any direction you choose, or to collect revenue from your home Trade Node. You currently have idle Merchants, select a Trade Node and assign your Merchants to tasks there to take advantage of their skills."
@@ -943,7 +943,7 @@
  COHESION_NO_NEIGHBOURING_COLONIZER:0 "No colonizers neighbouring federation: $VALUE|+=1$\n"
  COHESION_FEDERATION_NO_MEMBER_STRONGER:0 "No member is stronger than Federation Leader: $VALUE|+=1$\n"
  COHESION_DESC:0 "Federal Cohesion is increased by having members of the same Culture or Cultural Group as the leader, and by having more advanced colonizing neighbours. It is reduced by having nations stronger than the leader and by each advancement made."
- pillaged_a_state_for_us:0 "Pillaged a state for us"
+ pillaged_a_state_for_us:0 "自国のために国家を収奪した"
  PAL_REVOLUTIONARY_NAME:0 "The Revolutionary Palatinate"
  PAL_REVOLUTIONARY_SHORT_NAME:0 "The Rev. Palatinate"
  PAP_REVOLUTIONARY_NAME:0 "The Revolutionary Papal State"
@@ -957,7 +957,7 @@
  RECOMMENDED_COUNTRIES:0 "推奨される国家"
  DLC_FEATURES:0 "特徴"
  DLC_DESCRIPTION:0 "説明"
- CANNOT_MOVE_GREAT_PROJECT_TOO_BIG:0 "The $GREATPROJECT$ is too big to move."
+ CANNOT_MOVE_GREAT_PROJECT_TOO_BIG:0 "$GREATPROJECT$は移転するには大きすぎます。"
  NO_REBELS_TO_SUPPORT:0 "There are no rebels in this country that are ready to receive our support."
  AGGRESSIVE_EXPANSION_PRIMITIVES:0 "Primitives"
  LEAVE_FEDERATION_DESC:0 "Leave the Federation."
@@ -992,7 +992,7 @@
  SELECT_CULTURE_DESIGNER:0 "Select $CULTURE|Y$ as your Primary Culture"
  CANNOT_CONCENTRATE_DEVELOPMENT_WRONG_SUBJECT_TYPE:0 "$SUBJECTTYPE|Y$ subjects cannot have their development concentrated"
  SELECT_EDICT_FOR_PROVINCE:0 "$PROVINCE$の布告を選択する："
- IF_COLONY_SIZE_IS_X:0 "If the colony has at least $SIZE|Y$ Provinces:"
+ IF_COLONY_SIZE_IS_X:0 "植民地が$SIZE|Y$以上の州を持つ場合："
  active_religious_turmoil:0 "Religious Turmoil"
  CONTINUE_BUTTON_STATS:0 "Return to Game"
  CONDOTTIERI_OFFER_ALLIANCE:0 "§R- You cannot rent out Condottieri to a nation that is at war with a nation that you have an Alliance with.§!"
