--- a/source/localisation/prov_names_l_english.yml
+++ b/source/localisation/prov_names_l_english.yml
@@ -3707,7 +3707,7 @@
  PROV4628:0 "ニタエンデ"
  PROV4629:1 "Ndawe Qoha"
  PROV4630:0 "ナタエンデ"
- PROV4631:1 "Naflat"
+ PROV4631:1 "ナフラット"
  PROV4632:1 "Tsi'ya"
  PROV4633:0 "ソバイプリ"
  PROV4634:1 "Tsék'aadn"
