--- a/source/localisation/cossacks_l_english.yml
+++ b/source/localisation/cossacks_l_english.yml
@@ -165,7 +165,7 @@
  INCREASE_TRUST_CANNOT_NOT_ALLY:0 "§Rあなたは§Y$COUNTRY_ADJ$§!の§Y$PLAYER$§!に対する信頼度を高めるには§Y$COUNTRY$§!と同盟を結ぶ必要があります。§!"
  INCREASE_TRUST_TOO_TRUSTY:0 "§R$COUNTRY|Y$はすでに$PLAYER|Y$に対して最高の信頼度を持っています。§!"
  INCREASE_TRUST_DESC:0 "§Y$COST$§!の好感度を費やして§Y$COUNTRY_ADJ$§!の§Y$PLAYER$§!に対する信頼度を§Y$AMT$§!増加させます。"
- PREPARE_WAR_CANNOT_COST:0 "§R彼らに戦争の準備を要請するには、§Y$COUNTRY$§!への好感度が§Y$COST$§!以上必要です。§!"
+ PREPARE_WAR_CANNOT_COST:0 "§R戦争の準備を要請するには、§Y$COUNTRY$§!への好感度が§Y$COST$§!以上必要です。§!"
  PREPARE_WAR_CANNOT_AT_WAR:0 "§R彼らがすでに戦争中の場合に§Y$COUNTRY$§!に戦争の準備を要請することはできません！§!"
  PREPARE_WAR_CANNOT_ALREADY_PREPARING:0 "§R§Y$COUNTRY$§!はすでに$WHO|Y$の要請により戦争の準備をしています。§!"
  PREPARE_WAR_CANNOT_ALREADY_PREPARING_US:0 "§R§Y$COUNTRY$§!は我々の要請で戦争の準備をしています。彼らは自身では戦争を開始せず、$DATE|Y$まで戦争に参加する意思があります。§!"
@@ -1477,7 +1477,7 @@
  AI_WANTS_PROVINCES:0 "\n\n$WHO|Y$は以下の州に関心を持っています：$LIST$。"
  COSSACKS_DESC:2 "§Yコサック§!階級に特別な権限を与えることにより、我々は軍隊のために彼らの最高の騎手を雇うことができます。コサックは、平均的な騎兵連隊よりも多くの白兵ダメージを与えます。"
  EST_VAL_ALLIANCE_ON_VC:1 "Alliance With $NAME$: §R$VAL|1$%§!"
- FAVORS_GAIN_TOOLTIP:1 "We gain $VAL|+=2$ favor(s) each month due to:\n$WHY$"
+ FAVORS_GAIN_TOOLTIP:1 "以下の要因により毎月$VAL|+=2$の好感度を獲得します：\n$WHY$"
  FAVOR_ALLIANCE_TT:0 "Allied: Relative Strength: $VAL|+=2$"
  FAVOR_ALLIANCE_BLOCKED_TT:0 "Refused Offensive Wars: $VAL|+=2$"
  FAVOR_CURRY_FAVORS_REP_TT:0 "Currying Favors (Diplomatic Reputation): $VAL|+=2$"
