--- a/source/localisation/leviathan_l_english.yml
+++ b/source/localisation/leviathan_l_english.yml
@@ -548,7 +548,7 @@
  MODIFIER_MONTHLY_REFORM_PROGRESS_BUILDING:0 "Monthly Reform Progress"
  MONTHLY_REFORM_PROGRESS_BUILDING_ENTRY:0 "\n$PROV|Y$: $VAL|+=2$"
  MIGRATE_NOT_MIGRATORY:0 "We are not a Migratory Tribe"
- REFORM_PROGRESS_HELP_DESC:0 "The lower the local autonomy is the faster you will gain reform points."
+ REFORM_PROGRESS_HELP_DESC:0 "自治率が低ければ低いほど政府改革点が早く得られます。"
  NATIVE_REFORM_PROGRESS_HELP_DESC:1 "先住民は建造物から政府改革進捗度を獲得できます。"
  EMBRACE_INSTITUTIONS_OF_EFFECT:0 "Embrace all Institutions that $WHO|Y$ has embraced.\n"
  NEEDS_NATIVE_SPONSOR:0 "Neighbouring country to reform off."
