--- a/source/localisation/triggers_and_effects_l_english.yml
+++ b/source/localisation/triggers_and_effects_l_english.yml
@@ -211,8 +211,8 @@
  REMOVE_IDEA_GROUP_EFFECT:0 "$IDEAGROUP|Y$のアイデアグループを削除します。"
  ADD_IDEA_EFFECT:0 "$IDEA|Y$のアイデアを追加します。"
  REMOVE_IDEA_EFFECT:0 "$IDEA|Y$のアイデアを削除します。"
- HRE_INHERITABLE_ENABLED:0 "神聖ローマ帝国は常に同じ国により継承されるようになります。\n"
- HRE_INHERITABLE_DISABLED:0 "神聖ローマ帝国は選挙制になります！\n"
+ HRE_INHERITABLE_ENABLED:0 "HRE is now always inherited by the same country.\nSubject princes no longer occupy Emperor's diplomatic relations slots\n"
+ HRE_INHERITABLE_DISABLED:0 "HRE is now open to election!\nEmperor's subject princes will use diplomatic relations slots\n"
  HAS_IDEAGROUP_TRIGGER:0 "§Y$COUNTRY$§Wが§Y$GROUP$§Wを持っている。\n"
  HAS_NOT_IDEAGROUP_TRIGGER:0 "§Y$COUNTRY$§Wが§Y$GROUP$§Wを持っていない。\n"
  HAS_MAXIDEAGROUP_TRIGGER:0 "§Y$COUNTRY$§Wが§Y$GROUP$§Wを完了している。\n"
