Save/Update files [ci skip]

--- a/source/localisation/aow_l_english.yml
+++ b/source/localisation/aow_l_english.yml
@@ -431,8 +431,8 @@
  LIBERTY_DESIRE_FROM_ADM_EFFICIENCY:0 "統治効率：$VAL$"
  LIBERTY_DESIRE_FROM_WAR_EXHAUSTION:0 "§Y$OVERLORD$§!の戦争疲弊：$VAL$"
  LIBERTY_DESIRE_FROM_MERCANTILISM:0 "§Y$OVERLORD$§!の重商主義：$VAL$"
- LIBERTY_DESIRE_FROM_RELATIVE_POWER:1 "Relative Army Power to §Y$OVERLORD$§! (§Y$AMT$%§!): $VAL$"
- LIBERTY_DESIRE_FROM_RELATIVE_POWER_ALL:3 "Relative Army Power of $COUNTED$ to §Y$OVERLORD$§! (§Y$AMT$%§!): $VAL$"
+ LIBERTY_DESIRE_FROM_RELATIVE_POWER:1 "§Y$OVERLORD$§!に対する相対的な陸軍力（§Y$AMT$%§!）：$VAL$"
+ LIBERTY_DESIRE_FROM_RELATIVE_POWER_ALL:3 "$COUNTED$の§Y$OVERLORD$§!に対する相対的な陸軍力（§Y$AMT$%§!）：$VAL$"
  LIBERTY_DESIRE_ALL:0 "すべての"
  AND_THE_SUPPORTER:0 "と支援国"
  AND_THE_SUPPORTERS:0 "と支援国"
@@ -762,8 +762,8 @@
  aow_events.48.a:0 "我々を助けてくれる者に対して、我々は何でもする。"
  aow_events.48.b:0 "我々の統治には、縁故主義以外に優先事項がある。"
  aow_events.49.t:0 "枢機卿大臣"
- aow_events.49.d:0 "[Root.GetName]の枢機卿の一人は、熟練した管理者であることが証明されており、すでに[Root.Monarch.GetTitle]に役立つ助言を提供している。この時点で、彼を政府の大臣にすることは、形式的なものに過ぎないが、それでも、彼はより強力に成長する可能性がある点で、重要な形式である。我々に奉仕する枢機卿を持つことは、確実に教皇が我々に信頼を寄せることにつながり、何よりもまず[Root.GetName]がカトリック国家であるという根拠を強化するだろう。"
- aow_events.49.a:0 "彼は今まで我々をよく助けており、我々は形式を手に入れよう。"
+ aow_events.49.d:0 "[Root.GetName]の枢機卿の一人は、行政官として優れた技術を持つことが判明しておりおり、すでに[Root.Monarch.GetTitle]に役立つ助言を提供している。ここで彼を政府の大臣にすることは形式的なものに過ぎないが、それでも重要な形式だ。なぜなら、彼はより強力に成長する可能性があるからだ。我々に仕える枢機卿がいれば、教皇が我々に信頼を寄せることは間違いなく、何よりもまず[Root.GetName]がカトリック国家であるという根拠を強化するだろう。"
+ aow_events.49.a:0 "彼は今まで我々をよく助けている。さっさと形式を整えよう。"
  aow_events.49.b:0 "[Root.Monarch.GetName]は[Root.GetName]を支配するのに彼の助言など必要としない。"
  aow_events.50.t:0 "枢機卿の政策への貴族達の反発"
  aow_events.50.d:0 "枢機卿の一人を政府の大臣にしたことで、彼は神学的な洞察力を提供することをはるかに超え、[Root.GetName]の管理は大幅に革新的なものとなった。残念なことに、権力を集中させるという彼の提案は、彼を日和見主義者として見始めた貴族から権力を取り除かなければ、不可能である。この時点で、紛争を原因として彼を退職させようとすると、おそらく彼の忠誠を失うことになるだろう。しかし、彼の計画により敗北する貴族たちは、これを簡単に作れる価値のある犠牲と考えている。"
@@ -1738,11 +1738,11 @@
  tyw_events.27.d:0 "イエズス会に[Root.Monarch.GetName]の教育を任せたことは、最も期待される結果をもたらした。新しい[Root.Monarch.GetTitle]は信念や勇気を欠いてはいないが、特にカトリック教会やイエズス会には忠実である。信心深い人々は喜んでいるが、異端者たちはこれまで以上に[Root.GetName]を恐れている。"
  tyw_events.27.a:0 "神のより大いなる栄光のために。"
  tyw_events.28.t:0 "[Root.Culture.GetName]の貴族が海外へ逃亡"
- tyw_events.28.d:1 "The war for religious unity in the Holy Roman Empire is not going our way. Our capital of [Root.Capital.GetCapitalName], by many considered the last safe refuge for those who can make it there, has been taken by the enemy. Now the nobility, both those who resided in the city to begin with and those who fled there, fear that [Root.GetName] is lost and have started to escape to those neighbors who may still house followers of the [Root.Religion.GetName] faith."
+ tyw_events.28.d:1 "神聖ローマ帝国における宗教統一のための戦争は我々の目標に向かっているわけではない。我々の首都である[Root.Capital.GetCapitalName]は、そこに辿り着くことが出来た多くの人が最後の安全な避難場所と考えたことで、敵に奪われた。今度は都市に住んでいた人々と、そこから逃げた人々の貴族たちの両者は、[Root.GetName]が失われ、まだ[Root.Religion.GetName]の信者が暮らしているかもしれない隣国に逃げ始めるのではないかと恐れている。"
  tyw_events.28.a:0 "彼らを逃がし、[Root.GetName]がより良い日を見たときに戻ってくればよい。"
  tyw_events.28.b:0 "何が何でも、国境の中で彼らを安全に連れ戻せ。"
  tyw_events.29.t:0 "[From.Culture.GetName]の貴族が亡命を求める"
- tyw_events.29.d:1 "The occupation of [From.Capital.GetCapitalName] has frightened many among [From.GetName]'s nobility, causing them to flee the country and hoping to find shelter among their fellow followers of the [Root.Religion.GetName] faith here. Since the conflict is religious, at least on the surface, we would be expected to aid those who share our faith. Yet the eyes of the League's enemies are ever upon us, and there are many who would not take kindly to seeing their enemies under our protection."
+ tyw_events.29.d:1 "[From.Capital.GetCapitalName]の占領は[From.GetName]の貴族の間に多くの恐怖を与え、この地で彼らの仲間である[Root.Religion.GetName]信者の中に避難場所を見つけたいと望み、彼らの逃亡を引き起こした。紛争が宗教的なものである以上、少なくとも表面的には、我々は信仰を共有する人々を援助することが期待されている。しかし、同盟の敵であったという視線は我々に向けられており、我々の保護の下で敵を見ることを快く受け入れない人々も多くいる。"
  tyw_events.29.a:0 "確実に、この負担を負うことができる他の者たちがいる。"
  tyw_events.29.b:0 "[Root.Religion.GetName]の信心深い者たちは、常にここで避難所を見つけるだろう。"
  tyw_events.30.t:0 "イニゴ・ベレス・デ・ゲバーラ"
@@ -1771,7 +1771,7 @@
  tyw_events.35.a:0 "素晴らしい取り組みだ。"
  tyw_events.35.b:0 "このような作戦には何の意味もない。"
  tyw_events.36.t:0 "宗教的抑圧からハンガリーは自由だ"
- tyw_events.36.d:1 "The formation of the Leagues in the Holy Roman Empire have made it clear that we live in a time when nations no longer sit idly by and allow people of their faith to suffer under godless rulers. Not far from our border, Hungarian followers of the [Root.Religion.GetName] religion are in exactly that unacceptable situation. Our nation has strong bonds with Hungary in law and in spirit, and cannot let this continue. It is time for us to free them and reclaim the land, so that [Root.Religion.GetName] blood may never be spilled upon it again."
+ tyw_events.36.d:1 "神聖ローマ帝国における連盟の形成は、国家はただ黙って座っているだけではなく、信仰の人々が神を信じない支配者の下で苦しむことを許さない時代に生きていることを明らかにした。我々の国境からさほど離れていない、ハンガリーの[Root.Religion.GetName]教徒たちは、まったく容認できない状況にある。我が国は、ハンガリーと法的に、精神的に強い結びつきがあり、これを続けさせることはできない。彼らを解放して土地を取り戻す時が来ており、[Root.Religion.GetName]の血が再びその上に流されることはない。"
  tyw_events.36.a:0 "トランシルヴァニアはハンガリー人の側に立つ。"
  tyw_events.37.t:0 "トランシルヴァニアの黄金時代"
  tyw_events.37.d:0 "我が国は、現在の形となって以来、おそらく最良の時代を見ている。[Root.Monarch.GetName]は非常に有能な[Root.Monarch.GetTitle]であることが証明されており、[Root.Capital.GetCapitalName]を文化的で印象的な都市にするための投資が行われている。我々は今後10年間、全国に建築と教育を広め、平和と繁栄の時代が続くことを願っている。"
