--- a/source/localisation/cossacks_l_english.yml
+++ b/source/localisation/cossacks_l_english.yml
@@ -1476,11 +1476,11 @@
  BLOCK_OFFENSIVE_WARS_ENABLE_DESC:1 "§Y$COUNTRY$§!に対し我々は彼らの攻撃的な戦争に参加しないことを伝えます。これはまた好感度の蓄積を止め、彼らがあなたなしでも管理できると考えれば、同盟を終了する可能性があります。クリックすると再び攻撃的な戦争に参加することを伝えます。"
  AI_WANTS_PROVINCES:0 "\n\n$WHO|Y$は以下の州に関心を持っています：$LIST$。"
  COSSACKS_DESC:2 "§Yコサック§!階級に特別な権限を与えることにより、我々は軍隊のために彼らの最高の騎手を雇うことができます。コサックは、平均的な騎兵連隊よりも多くの白兵ダメージを与えます。"
- EST_VAL_ALLIANCE_ON_VC:1 "Alliance With $NAME$: §R$VAL|1$%§!"
+ EST_VAL_ALLIANCE_ON_VC:1 "$NAME$との同盟:§R$VAL|1$%§!"
  FAVORS_GAIN_TOOLTIP:1 "以下の要因により毎月$VAL|+=2$の好感度を獲得します：\n$WHY$"
- FAVOR_ALLIANCE_TT:0 "Allied: Relative Strength: $VAL|+=2$"
- FAVOR_ALLIANCE_BLOCKED_TT:0 "Refused Offensive Wars: $VAL|+=2$"
- FAVOR_CURRY_FAVORS_REP_TT:0 "Currying Favors (Diplomatic Reputation): $VAL|+=2$"
- FAVOR_CURRY_FAVORS_OPINION_TT:0 "Currying Favors (Opinion): $VAL|+=2$"
- FAVOR_LACK_OF_ALLIANCE_TT:0 "Lack of Alliance: $VAL|+=2$"
- BUILD_UNIT_ONLY_TRANSPORTS:0 "§RCan only build transports!§!\n"
+ FAVOR_ALLIANCE_TT:0 "同盟軍:相対的兵力:$VAL|+=2$"
+ FAVOR_ALLIANCE_BLOCKED_TT:0 "攻撃側戦争の拒否:$VAL|+=2$"
+ FAVOR_CURRY_FAVORS_REP_TT:0 "おべっか中(外交評判):$VAL|+=2$"
+ FAVOR_CURRY_FAVORS_OPINION_TT:0 "おべっか中(評価)：$VAL|+=2$"
+ FAVOR_LACK_OF_ALLIANCE_TT:0 "同盟国の不足：$VAL|+=2$"
+ BUILD_UNIT_ONLY_TRANSPORTS:0 "§R建造できるのは輸送船のみですよ！§!\n"
