--- a/source/localisation/diplomacy_l_english.yml
+++ b/source/localisation/diplomacy_l_english.yml
@@ -651,7 +651,7 @@
  CALL_ALLIES:0 "同盟国への参戦要請"
  ENEMY_ALLIES:0 "敵側同盟国"
  CALL_COLONIAL_ALLIES:0 "従属国への参戦要請"
- FULL_ALLY_CHECKBOX_WILL_AUTOJOIN:2 "The enemy $SUBJECTORALLY$ §Y$COUNTRY$§! will join this war on behalf of the defender but will NOT be able to call their own allies."
+ FULL_ALLY_CHECKBOX_WILL_AUTOJOIN:2 "敵国の$SUBJECTORALLY$ §Y$COUNTRY$§!はこの戦争で防衛側として参戦しますが、その同盟国に参戦要請することはできません。"
  FULL_ALLY_CHECKBOX_WILL_CALL:1 "$SUBJECTORALLY$ §Y$COUNTRY$§!はこの戦争で共戦国と見なされます。この国は同盟国に参戦要請することができます。"
  FULL_ALLY_CHECKBOX_WILL_NOT_CALL:1 "$SUBJECTORALLY$ §Y$COUNTRY$§!はこの戦争で共戦国と見なされません。この国は同盟国に参戦要請することができませんが、州を得るためには二倍の戦勝点が必要です。"
  FULL_ALLY_CHECKBOX_DESC:1 "§G$SUBJECTORALLY$を共戦国と見なすかどうかを切り替えます。§!"
@@ -892,5 +892,5 @@
  BENEFIT_FOR_ELECTOR_PER_PRINCE:1 "選帝侯が以下を得る（諸侯の数に応じて）：\n$MODIFIER$"
  BENEFIT_FOR_EVERYONE:1 "帝国の全ての国家が以下を得る：\n$MODIFIER$"
  ENEMY_STRENGTH_UNACCOUNTED:0 "参戦要請される可能性のある国の兵力について一切の情報を持ち合わせていません。"
- SUPPORT_REBELS_POWER_PROJECT:0 "This will also increase our power projection against them."
- CURRY_FAVORS_OUTLINER:0 "$NAME$ is currying favors with $COUNTRY|Y$. We now gain $VAL|+=2$ favors each month due to:\n$WHY$"
+ SUPPORT_REBELS_POWER_PROJECT:0 "これによって、彼らに対する自国の戦力投射も増加します。"
+ CURRY_FAVORS_OUTLINER:0 "$NAME$は$COUNTRY|Y$におべっか中です。現在、以下の理由で、毎月$VAL|+=2$の好感度を獲得します：\n$WHY$"
