--- a/source/localisation/mandala_missions_l_english.yml
+++ b/source/localisation/mandala_missions_l_english.yml
@@ -658,7 +658,7 @@
  desc_filipino_conquer_visayas:0 "ビサヤ諸島での武力行使によって国民の士気は向上している。"
  filipino_conquer_mindanao:0 "ミンダナオ島の征服"
  desc_filipino_conquer_mindanao:0 "ミンダナオ島での武力行使によって国民の士気は向上している。"
- plb_gold_and_diamonds_title:0 "金とダイアモンド"
+ plb_gold_and_diamonds_title:0 "金とダイヤモンド"
  plb_gold_and_diamonds_desc:0 "自国は天然資源で有名であり、金やダイヤモンドの鉱石が鉱山の奥深くで発見された。自国の交易確保のため、この鉱石を利用すべきだろう。"
  plb_a_place_where_the_water_leaks_title:0 "水の漏れる地"
  plb_a_place_where_the_water_leaks_desc:0 "自国は、まさに名の通り、常に水と関連している。適切な規模の船団を維持することで、隣国になぜいつもそうであったかを思い出させることができるだろう。"
@@ -684,7 +684,7 @@
  desc_plb_and_diamonds:0 "交易の中心部で権勢を見せつけたことで、結果的に自国の権勢が増大した。"
  plb_sea_people:0 "海の民族"
  desc_plb_sea_people:0 "自国の海軍の伝統は、海の遊牧民によって増強されるのだ。"
- plb_dragonships:0 "ドラドンシップ"
+ plb_dragonships:0 "ドラゴンシップ"
  desc_plb_dragonships:1 "ドラゴンボートを自国の船舶に合うよう調整し、性能を向上させた。"
  plb_srivijaya_temples:0 "シュリーヴィジャヤの寺院"
  desc_plb_srivijaya_temples:1 "自国の寺院は、宣教師たちの説得力を高めるのに一役買っている。"
