--- a/source/localisation/new_missions_l_english.yml
+++ b/source/localisation/new_missions_l_english.yml
@@ -1983,7 +1983,7 @@
  oceania_remove_euro_desc:0 "侵略的なヨーロッパ人は、急速にオセアニアを征服しており、我々の伝統的な故郷にも拡大している。彼らを船へと追いやる必要がある。"
  oceania_sunset_invasion_title:0 "日沈む地からの侵略"
  oceania_sunset_invasion_desc:0 "侵略者たちは我が国から逃げ出した。しかしそれで十分だろうか？いずれは彼らはより恐ろしい軍隊とともに戻ってくるかもしれない。我々は彼らをヨーロッパへと追跡しよう。"
- colombia_holy_order_alternative_tooltip:0 "§Y25§! provinces owned by §Y[Root.GetName]§! or its subjects in §YColonial Colombia§! are §Y[Root.Religion.GetName]§!"
- mexico_holy_order_alternative_tooltip:0 "§Y25§! provinces owned by §Y[Root.GetName]§! or its subjects in the §YMexico§! region are §Y[Root.Religion.GetName]§!."
- native_reductions_alternative_tooltip:0 "§Y75§! provinces owned by §Y[Root.GetName]§! or its subjects in §YNorth America§! and §YSouth America§! are §Y[Root.Religion.GetName]§!."
- port_jesuits_alternative_tooltip:1 "§Y20§! provinces in §YColonial Brazil§! owned by you or your non-tributary subjects are §Y[Root.Religion.GetName]§!."
+ colombia_holy_order_alternative_tooltip:0 "§Y[Root.GetName]§!もしくはその従属国が§Yコロンビア植民地方§!で、宗教が§Y[Root.Religion.GetName]§!の州を§Y25§!州領有する"
+ mexico_holy_order_alternative_tooltip:0 "§Y[Root.GetName]§!もしくはその従属国が§Yメキシコ§!地方で、宗教が§Y[Root.Religion.GetName]§!の州を§Y25§!州領有する"
+ native_reductions_alternative_tooltip:0 "§Y[Root.GetName]§!もしくはその従属国が§Y北アメリカ§!及び§Y南アメリカ§!で、宗教が§Y[Root.Religion.GetName]§!の州を§Y75§!州領有する"
+ port_jesuits_alternative_tooltip:1 "自国もしくは自国の朝貢国以外の従属国が§Yブラジル植民地方§!で、宗教が§Y[Root.Religion.GetName]§!の州を§Y20§!州領有する"
