--- a/source/localisation/areas_regions_l_english.yml
+++ b/source/localisation/areas_regions_l_english.yml
@@ -866,15 +866,15 @@
  top_end_area:0 "トップエンド"
  top_end_area_name:1 "トップエンド"
  top_end_area_adj:1 "トップエンド"
- northern_australia_area:1 "Capricornia"
- northern_australia_area_name:2 "Capricornia"
- northern_australia_area_adj:2 "Capricornian"
+ northern_australia_area:1 "カプリコーニア"
+ northern_australia_area_name:2 "カプリコーニア"
+ northern_australia_area_adj:2 "カプリコーニア"
  eastern_australia_area:1 "ニューサウスウェールズ"
  eastern_australia_area_name:1 "ニューサウスウェールズ"
  eastern_australia_area_adj:1 "ニューサウスウェールズ"
- murray_river_area:1 "Princeland"
- murray_river_area_name:1 "Princeland"
- murray_river_area_adj:1 "Princelander"
+ murray_river_area:1 "プリンスランド"
+ murray_river_area_name:1 "プリンスランド"
+ murray_river_area_adj:1 "プリンスランド"
  southern_australia_area:1 "ビクトリア"
  southern_australia_area_name:0 "ビクトリア"
  southern_australia_area_adj:0 "ビクトリア"
@@ -1851,7 +1851,7 @@
  high_plains_area_adj:1 "ヒノノエイーノ"
  south_dakota_area_name:1 "イサイエンティ"
  south_dakota_area_adj:1 "イサイエンティ"
- dakota_area:1 "North Dakota"
+ dakota_area:1 "ノースダコタ"
  dakota_area_name:1 "ウィチェナ"
  dakota_area_adj:1 "ウィチェナ"
  upper_missouri_area:0 "上ミズーリ"
@@ -1863,7 +1863,7 @@
  llano_estacado_area:0 "リャノ・エスタカード"
  llano_estacado_area_name:1 "ヌム二ル"
  llano_estacado_area_adj:1 "ヌム二ル"
- coastal_prarie_area:2 "Coastal Prairie"
+ coastal_prarie_area:2 "沿岸平原"
  coastal_prarie_area_name:1 "リパイエンディ"
  coastal_prarie_area_adj:1 "リパイエンディ"
  texas_area:0 "テキサス"
@@ -2737,7 +2737,7 @@
  utsang_area:2 "ツァン"
  utsang_area_name:2 "ツァン"
  utsang_area_adj:2 "ツァン"
- south_dakota_area:3 "South Dakota"
+ south_dakota_area:3 "サウスダコタ"
  yaroslavl_area:1 "ヤロスラヴリ"
  yaroslavl_area_name:1 "ヤロスラヴリ"
  hispaniola_area:1 "ハイチ"
