--- a/source/localisation/astu_1_31_l_english.yml
+++ b/source/localisation/astu_1_31_l_english.yml
@@ -1,43 +1,43 @@
 ﻿l_english:
  centralize_state:0 "ステートの集権化"
- CENTRALIZE_STATE_DESC:2 "§YCentralize State§!\nSpend $COST|Y$ of government progress to centralize the $STATE|Y$ in the most developed province, reducing it's governing cost by $REDUCTION|0Y$. It will take $YEARS|0Y$ years."
+ CENTRALIZE_STATE_DESC:2 "§Yステートの集権化§!\n政府改革進捗度のコストを$COST|Y$使用して、$STATE|Y$を最も開発度の高い州に集中させます。そして、その統治コストを$REDUCTION|0Y$削減します。それには$YEARS|0Y$年かかります。"
  CENTRALIZE_STATE_COST:0 "十分な政府改革進捗度がありません"
  CENTRALIZE_STATE_TERRITORY:0 "集権化はテリトリーではなく、ステートにのみ行えます。"
- CENTRALIZE_STATE_DEV:1 "Governing cost of $STATE$ must be $STATE_DEV|0$ development, or higher"
+ CENTRALIZE_STATE_DEV:1 "$STATE$の統治コストは$STATE_DEV|0$以上でなくてはなりません"
  CENTRALIZE_STATE_PROVINCES:0 "ステートの全域を領有していません。"
  CENTRALIZE_STATE_DONE:0 "既にステートの集権化を行っています"
  CENTRALIZE_STATE_PROGRESS:0 "建設は既に進行中です。$DATE$に完了するでしょう。"
  CONFIRM_CENTRALIZE_STATE:0 "$STATE$のステートの集権化"
- CONFIRM_CENTRALIZE_STATE_TEXT:1 "Are you sure you want to spend $COST|0Y$ of government progress to centralize the $STATE|Y$ in the province of $PROVINCE|Y$, and reduce it's governing cost by $REDUCTION|0Y$? It will take $YEARS|0Y$ years."
- CENTRALIZE_STATE_CONSTRUCTION_TITLE:0 "Centralize state completed"
- CENTRALIZE_STATE_CONSTRUCTION_SETUP:0 "When centralize state completed."
+ CONFIRM_CENTRALIZE_STATE_TEXT:1 "$PROVINCE|Y$州に$STATE|Y$を集中させ、その統治コストを$REDUCTION|0Y$削減するため、政府改革進捗度コストを$COST|0Y$を使用して本当に構いませんか？それには$YEARS|0Y$年かかります。"
+ CENTRALIZE_STATE_CONSTRUCTION_TITLE:0 "ステートの集権化が完了"
+ CENTRALIZE_STATE_CONSTRUCTION_SETUP:0 "ステートの集権化が完了した場合。"
  CENTRALIZE_STATE_CONSTRUCTION_1:0 "ステートの集権化を完了"
- CENTRALIZE_STATE_CONSTRUCTION_2:0 "The construction in $PROVINCE$ has been finished."
- CENTRALIZE_STATE_CONSTRUCTION_3:1 "Now $STATE|Y$ is a centralized state."
- CENTRALIZE_STATE_CONSTRUCTION_LOG:0 "Centralize state construction has been completed in $PROVINCE$."
- CENTRALIZE_STATE_CONSTRUCTION_BTN1:0 "OK"
- CENTRALIZE_STATE_CONSTRUCTION_CANCEL_TITLE:0 "Centralize state canceled"
- CENTRALIZE_STATE_CONSTRUCTION_CANCEL_SETUP:0 "When centralize state canceled due to owner change or the state becomes a territory."
- CENTRALIZE_STATE_CONSTRUCTION_CANCEL_1:0 "Centralize state canceled"
- CENTRALIZE_STATE_CONSTRUCTION_CANCEL_2:0 "The construction in $PROVINCE$ has been canceled."
- CENTRALIZE_STATE_CONSTRUCTION_CANCEL_LOG:0 "Centralize state construction has been canceled in $PROVINCE$."
- CENTRALIZE_STATE_CONSTRUCTION_CANCEL_BTN1:0 "OK"
- CENTRALIZE_STATE_CANCEL_TITLE:0 "Centralize state construction removed"
- CENTRALIZE_STATE_CANCEL_SETUP:0 "When centralize state construction is removed due to owner change."
- CENTRALIZE_STATE_CANCEL_1:0 "Centralize state construction removed"
- CENTRALIZE_STATE_CANCEL_2:0 "The construction in $PROVINCE$ has been removed."
- CENTRALIZE_STATE_CANCEL_3:1 "You don't own all provinces in the state."
- CENTRALIZE_STATE_CANCEL_LOG:0 "Centralize state construction has been removed in $PROVINCE$."
- CENTRALIZE_STATE_CANCEL_BTN1:0 "OK"
- CONFIRMABANDONSTATECENTRALIZED:0 "$STATE$ will no longer be a centralized state."
- INFLACTION_REDUCTION:0 "Inflaction reduction is modified by:\n"
- MODIFIER_STATE_GOVERNING_INCREASE_COST:0 "State Governing Increase Cost"
- CENTRALIZE_STATE_CAPITAL:0 "You can't centralize your capital state"
- WARNING_CONSTRUCTION_LOST: "Your ships under construction will be canceled if the new province has no port"
- CONSTRUCTION_LOST_TITLE: "Ship constructions canceled"
- CONSTRUCTION_LOST_SETUP: "When migrating some constructions are removed due to being invalid in the new province."
- CONSTRUCTION_LOST_1: "Constructions canceled"
- CONSTRUCTION_LOST_2: "Ships under construction were canceled due to migration"
- CONSTRUCTION_LOST_3: "You can´t build ships if you have no port"
- CONSTRUCTION_LOST_LOG: "Ships lost due to migrating into a new province"
- CONSTRUCTION_LOST_BTN1: "OK"
+ CENTRALIZE_STATE_CONSTRUCTION_2:0 "$PROVINCE$での工事が完了しました。"
+ CENTRALIZE_STATE_CONSTRUCTION_3:1 "今、$STATE|Y$はステート集権化されてます。"
+ CENTRALIZE_STATE_CONSTRUCTION_LOG:0 "$PROVINCE$でのステート集権化工事が完了しました。"
+ CENTRALIZE_STATE_CONSTRUCTION_BTN1:0 "よし"
+ CENTRALIZE_STATE_CONSTRUCTION_CANCEL_TITLE:0 "ステートの集権化の中止"
+ CENTRALIZE_STATE_CONSTRUCTION_CANCEL_SETUP:0 "領有者の変更やステートがテリトリーに変更されたことによって、ステートの集権化が中止された場合。"
+ CENTRALIZE_STATE_CONSTRUCTION_CANCEL_1:0 "ステートの集権化の中止"
+ CENTRALIZE_STATE_CONSTRUCTION_CANCEL_2:0 "$PROVINCE$での工事を中止しました。"
+ CENTRALIZE_STATE_CONSTRUCTION_CANCEL_LOG:0 "$PROVINCE$でのステートの集権化工事を中止しました。"
+ CENTRALIZE_STATE_CONSTRUCTION_CANCEL_BTN1:0 "よし"
+ CENTRALIZE_STATE_CANCEL_TITLE:0 "ステートの集権化工事が解除されました"
+ CENTRALIZE_STATE_CANCEL_SETUP:0 "領有者の変更によってステートの集権化工事が解除された場合"
+ CENTRALIZE_STATE_CANCEL_1:0 "ステートの集権化工事が解除されました"
+ CENTRALIZE_STATE_CANCEL_2:0 "$PROVINCE$での工事は解除されました。"
+ CENTRALIZE_STATE_CANCEL_3:1 "あなたはそのステートの全ての州を領有していません。"
+ CENTRALIZE_STATE_CANCEL_LOG:0 "$PROVINCE$でのステートの集権化は解除されました。"
+ CENTRALIZE_STATE_CANCEL_BTN1:0 "よし"
+ CONFIRMABANDONSTATECENTRALIZED:0 "$STATE$はもはやステートの集権化はなされていません。"
+ INFLACTION_REDUCTION:0 "インフレ削減補正:\n"
+ MODIFIER_STATE_GOVERNING_INCREASE_COST:0 "ステート統治コスト上昇"
+ CENTRALIZE_STATE_CAPITAL:0 "首都のあるステートは集権化できません。"
+ WARNING_CONSTRUCTION_LOST: "新しい州に港がなければ、艦船の建造は中止になります。"
+ CONSTRUCTION_LOST_TITLE: "艦船の建造中止"
+ CONSTRUCTION_LOST_SETUP: "移住する際、新しい州では無効なので、いくつかの工事が解除されます。"
+ CONSTRUCTION_LOST_1: "工事の中止"
+ CONSTRUCTION_LOST_2: "移住によって、艦船の建造は中止されました。"
+ CONSTRUCTION_LOST_3: "港がないと、艦船の建造は出来ません。"
+ CONSTRUCTION_LOST_LOG: "新しい州への移住のため、艦船が失われます。"
+ CONSTRUCTION_LOST_BTN1: "よし"
