--- a/source/localisation/diplo_reasons_l_english.yml
+++ b/source/localisation/diplo_reasons_l_english.yml
@@ -372,4 +372,4 @@
  DIPLO_ESCALATED_COLONIAL_WAR:0 "植民地戦争に巻き込まれることを望んでいない："
  DIPLO_THREATHENING_MANDATE:0 "天命が脅かされている："
  DIPLO_TRADECITY:0 "$WHO$は交易都市で同盟を避けようとします。"
- DIPLO_RESTRICTED_REGION:0 "Tradecharter Regional Scepticism: "
+ DIPLO_RESTRICTED_REGION:0 "交易勅許地域の懐疑論："
