--- a/source/localisation/emperor_estates_l_english.yml
+++ b/source/localisation/emperor_estates_l_english.yml
@@ -49,7 +49,7 @@
  estate_brahmins_brahmin_leadership:0 "バラモンの指導力"
  estate_brahmins_flexible_deities:0 "個人の主神の選択"
  estate_brahmins_flexible_deities_effect_tooltip:1 "§Y25§!の正統性を消費することで§Y20§!年ごとに個人の主神を変更する決断を有効にします。"
- brahmin_hindu_deity_decision_title:0 "Choose Personal Deity Again"
+ brahmin_hindu_deity_decision_title:0 "個人の主神の再選択"
  brahmin_hindu_deity_decision_desc:0 "自分の選択を後悔する人も時にはいるだろう。若かりし頃にどの神に従うか決めたら一生それに縛られるのか？幸運なことに、バラモンの計らいでこの件に関しては限度はあるものの柔軟な取り扱いが可能だ。"
  decision_once_every_ten_years:0 "この決断は§Y10§!年毎に一回だけ選択できます。"
  estate_brahmins_loyalty_privilege:0 "バラモン議会"
@@ -158,7 +158,7 @@
  ESTATES_SEIZE_LAND_UNREST_DESC:0 "開発度の階級の占有は§R+5§!の§Y不穏度§!を受け取り、最も影響力のある階級は愚かにもあなたに対して武器を取ります。"
  IS_NOT_MOST_POWERFUL_ESTATE:0 "$ESTATE$は最も強力な階級ではない。"
  IS_MOST_POWERFUL_ESTATE:0 "$ESTATE$は最も強力な階級である。"
- ESTATE_LAND_SHARE_CHANGE_ENTRY:0 "  $ESTATE$: $CHANGE|2Y=&$\n"
+ ESTATE_LAND_SHARE_CHANGE_ENTRY:0 "$ESTATE$：$CHANGE|2Y=&$\n"
  APPLY_SPRITE_PACK_EFFECT:0 "§Y[GetName]§!は$SPRITE_PACK|Y$を使用します。"
  crown_land_level_0:0 "直轄地の所有権"
  crown_land_level_1:0 "直轄地の所有権"
@@ -702,7 +702,7 @@
  sending_condottieri_to_them:0 "§Y[Root.GetName]§!はコンドッティエーリを§Y国家§!に貸し出している。"
  is_root_religion:0 "§Y[Root.Religion.GetName]§!である。"
  pay_crown_land:0 "直轄地の利用を許可"
- estate_church_propagate_religion_trigger_tooltip:2 "All inhabited provinces in the §Y[agenda_trade_node.GetTradeNodeName]§! trade node follow the §Y[Root.Religion.GetName]§! faith, or follow a Christian, Muslim, or Jewish faith."
+ estate_church_propagate_religion_trigger_tooltip:2 "§Y[agenda_trade_node.GetTradeNodeName]§!交易ノードにあるすべての州が§Y[Root.Religion.GetName]§!、キリスト、イスラム、ユダヤのいずれかの信仰に従っている。"
  agenda_automatically_completed_explain_dhimmi:0 "§Y[agenda_province.GetName]§!の州自治率が§R25%§!増加します。"
  estate_nobles_protect_our_culture_effect_tooltip:0 "征服された場合、§Y[agenda_province.GetName]§!は§G5§!年間分離主義を失います。"
  owned_by_country_of_root_religion:0 "§Y[Root.Religion.GetName]§!信仰の国家によって領有されている。"
@@ -1239,4 +1239,4 @@
  CROWNLAND:0 "直轄地"
  seize_land_rebels_tt:0 "いずれかの階級の忠誠度が§R30§!を下回ると、反乱軍が蜂起する可能性があります。"
  no_other_mil_privilege:0 "§Y月間軍事力§!を付与する他の階級特権がない"
- desc_increase_crown_land_share:0 "By centralizing the ownership of the land in royal hands, we can control the widespread power of the Estates much better."
+ desc_increase_crown_land_share:0 "土地の所有権を王家側へ集中させることで、広範に及ぶ階級の権力をさらにうまく管理できるようになる。"
