--- a/source/localisation/government_l_english.yml
+++ b/source/localisation/government_l_english.yml
@@ -334,16 +334,16 @@
  native_federation_reform_desc:0 "共に在りて強くなる。連邦になることで、同盟国から得られる支援は外交によるものでなく、まさに固い絆に基づくものとなる。"
  native_clan_council_reform_desc:0 "人々に信頼を広めることが重要だ。部族の利益のためならば全てを投げうつことを厭わない者によって構成された評議会から選挙を行うことで、一人が全ての権力を保持することのないようになるだろう。"
  native_martial_tradition_reform_desc:0 "野生の世界では、生存を懸けて戦わねばならない。母なる自然は寛容であると同時に危険であり、我々は野生の獣や土地を奪わんとする者から身を守る手段を学んだ。"
- native_oral_tradition_reform_desc:0 "We are our stories. What has happened in the past teaches us what may happen in the future."
+ native_oral_tradition_reform_desc:0 "我々は我々の物語だ。過去の出来事は、未来に起こるかもしれないことを教えてくれているのだ。"
  native_land_tradition_reform_desc:0 "我々はいつだってここにいる。地球が生まれ、大地が作られた時からここにいた。大地が燃え、地球が消滅する時もここにいるだろう。"
- native_war_band_reform_desc:0 "Feeling safe is the most important thing in life. By focusing on warfare, we will be able to ensure the welfare of our tribe."
- native_seasonal_travel_reform_desc:0 "As the world changes throughout the year, so must we. If we follow the seasons in their journey, we will find prosperity."
- native_settle_down_reform_desc:0 "Sometimes following the storm is not as important as finding shelter for it. The time has come for us to settle down and build more permanent villages."
- native_codified_power_reform_desc:0 "There is nothing above the law. It makes the world a fairer place and it equals the lives of everyone in our tribe."
- native_trading_with_foreigners_reform_desc:0 "The arrival of foreigners to our land has allowed us to gain access to new technologies that have changed our way of life, both in times of war and peace."
- native_becomes_monarchy_reform_desc:0 "The lineage of our rulers is a blessing from the gods. Their royal blood has made them suitable to guide us towards prosperity."
- native_becomes_republic_reform_desc:0 "To ensure a just government, the power must be democratically elected. By choosing our leaders we choose the fate of our nation."
- native_becomes_theocracy_reform_desc:0 "Allowing mortals to decide over such an important issue as the fate of our people is not something that can be done without spiritual guidance. Our ruler must be the voice of the gods."
- native_becomes_horde_reform_desc:0 "Some spirits can never be tamed. There is nothing more reliable than our own souls when it comes to the government of our nation. We shall never lose that freedom."
- native_hereditary_reform_desc:0 "Those who came before us know what we seek. They have already gone through times of war and peace, through times of prosperity and hunger. Our rulers must follow their sensible guidance, and their blessed bloodline."
- native_diplomatic_cermonies_reform_desc:0 "It is one thing to be together in the government of our people, an important, but aseptic task; and it is another thing to share the same food, the same water, the same rituals as the sun goes up and down and we sing."
+ native_war_band_reform_desc:0 "安心だと感じることは、人生で最重要なことだ。戦争に注力することで、我が部族の幸福を確保できるだろう。"
+ native_seasonal_travel_reform_desc:0 "1年を通じて世界が変化するように、我々も変化せねばならない。季節の旅の後を追い続けることができたなら、繁栄を手に入れることができるだろう。"
+ native_settle_down_reform_desc:0 "時として、嵐を追うことが、嵐に対する避難所を見つけることほど重要ではないことがある。定住して、より定住向きの村を建設する時が来ている。"
+ native_codified_power_reform_desc:0 "法の上には何も存在しない。この理が世界をより公平にし、我が部族全員の人生を平等のものとする。"
+ native_trading_with_foreigners_reform_desc:0 "外国人が自領へとやってきたことで、戦時平時問わず、生活様式を変えてしまうような新技術を手に入れることができた。"
+ native_becomes_monarchy_reform_desc:0 "我が支配者の血統は、神々から祝福されたものだ。その王家の血筋は、我々を繁栄に導くに適したものだ。"
+ native_becomes_republic_reform_desc:0 "公正なる政府の実現には、権力者が民主的に選出されなければならない。指導者の選択とは、国の命運を選ぶということだ。"
+ native_becomes_theocracy_reform_desc:0 "我が民族の運命のような、そんな重要な問題を人に決定させるというのは、霊的な導き無しにはできないことだ。我が支配者は神々の声であらねばならない。"
+ native_becomes_horde_reform_desc:0 "絶対に制御不能な魂も存在する。自国の政治に関しては、自身の魂ほど信頼できるものはない。その自由は決して失うべきではない。"
+ native_hereditary_reform_desc:0 "先人たちは我々が何を求めているかを知っている。彼らはすでに戦争と平和の時代、繁栄と飢餓の時代を経験した。我が支配者は彼らの分別ある導きと、彼らの祝福された血統の後を追わねばならない。"
+ native_diplomatic_cermonies_reform_desc:0 "それは、国民の政府と共にあり、重要ではあるが、無菌の仕事だ。つまり、同じ食べ物、同じ水、太陽が昇り降りする際に行う同じ儀式、そして歌を共有しあうこととは別のことだ。"
