--- a/source/localisation/government_names_l_english.yml
+++ b/source/localisation/government_names_l_english.yml
@@ -507,7 +507,7 @@
  HEIR_fem:0 "女後継者"
  POPE_ELECTOR:0 "教皇・選帝侯"
  POPETTE_ELECTOR:0 "女教皇・選帝侯"
- SISTERHOOD:0 "Sisterhood"
- GRAND_SISTERHOOD:0 "Grand Sisterhood"
- ABBESS:0 "Abbess"
- MOTHER_SUPERIOR:0 "Mother Superior"
+ SISTERHOOD:0 "修道女会"
+ GRAND_SISTERHOOD:0 "大修道女会"
+ ABBESS:0 "女子修道院長"
+ MOTHER_SUPERIOR:0 "女子大修道院長"
