--- a/source/localisation/red_queen_text_l_english.yml
+++ b/source/localisation/red_queen_text_l_english.yml
@@ -677,4 +677,4 @@
  DLC_dlc106_TOOLTIP_INSTANT:0 "Leviathan"
  DLC_dlc106_TOOLTIP_DELAYED:0 "-東南アジアのミッションツリー\n-記念碑\n-拡張された植民地国家\n‐好感度を稼ぐ\n‐開発度の集中\n‐中央集権国家\n‐拡張された摂政政治\n‐トーテム信仰\n\n追加機能：\n‐マンダラ政府改革\n‐首都の略奪\n‐輸送船の徴集"
  LANDING_dlc106_TEXT:0 "-東南アジアのミッションツリー\n-記念碑\n-拡張された植民地国家\n‐好感度を稼ぐ\n‐開発度の集中\n‐中央集権国家\n‐拡張された摂政政治\n‐トーテム信仰\n\n追加機能：\n‐マンダラ政府改革\n‐首都の略奪\n‐輸送船の徴集"
- LANDING_dlc106_FLAVOR_TEXT:0 "Picture a capital city that shines like a gemstone, improved by the wealth drawn from the hinterland - decorated by riches demanded from vassals. A capital not of a territorial empire, but of a compact and concentrated state. Picture it and then make it so in Europa Universalis IV: Leviathan.\n\n Leviathan offers new tools that allow you to play “tall” with more focused realms with a few centers of power. It also has a host of other changes to well-established game features like Regencies and Colonies."
+ LANDING_dlc106_FLAVOR_TEXT:0 "宝石の如く輝く首都を想像してみてください。それは、内陸地から得られた富で改善されましたー従属国から要求した富で彩られたものでもあります。広大な領土を有する帝国の首都ではなく、小さく集中した国家の首都です。Europa Universalis IV： Leviathanでは、それを想像、実現することができます。\n\nLeviathanでは、いくつかの力の中心を持つ、より集中した領域で「高い」プレイを可能にする新しいツールが用意されています。また、摂政制や植民地といった確立したゲーム機能にも多くの変更が加えられています。"
