Save/Update files [ci skip]

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -765,8 +765,8 @@
  DEVELOPMENT_AT_LEAST:0 "開発度が$VAL|Y$以上である\n"
  TOTAL_DEVELOPMENT_LESS_THAN:2 "総開発度が$VAL|Y$未満である（現在$CURRENT|0Y$）\n"
  TOTAL_DEVELOPMENT_AT_LEAST:2 "総開発度が$VAL|Y$以上である（現在$CURRENT|0Y$）\n"
- HAVE_LESS_DEVELOPMENT_THAN_COMP:2 "$COUNTRYNAME|Y$（$VAL|Y$）よりも開発度が低い。現在$CURRENT|0Y$。"
- HAVE_MORE_DEVELOPMENT_THAN_COMP:2 "$COUNTRYNAME|Y$（$VAL|Y$）よりも開発度が高い。現在$CURRENT|0Y$。"
+ HAVE_LESS_DEVELOPMENT_THAN_COMP:2 "開発度が$COUNTRYNAME|Y$（$VAL|Y$）よりも低い。現在$CURRENT|0Y$。"
+ HAVE_MORE_DEVELOPMENT_THAN_COMP:2 "開発度が$COUNTRYNAME|Y$（$VAL|Y$）よりも高い。現在$CURRENT|0Y$。"
  TOTAL_DEVELOPMENT_GROWTH_LESS_THAN:0 "総開発度の成長が$VAL|Y$未満である\n"
  TOTAL_DEVELOPMENT_GROWTH_AT_LEAST:0 "総開発度の成長が$VAL|Y$以上である\n"
  OFR_DEVELOPMENT_LESS_THAN:0 "総開発度が$OVERLORD$の§Y$VAL$%§!未満である\n"
@@ -2089,7 +2089,7 @@
  native_trader_tt:0 "このオプションを使用すると、我々は原住民と§Y交易§!を行うことで、そこから利益を得ます。"
  religious_unity:0 "宗教統一度"
  inverse_religious_unity:0 "宗教統一度"
- canton:0 "広東"
+ canton:0 "広州"
  malacca:0 "マラッカ"
  australia:0 "オーストラリア"
  gulf_of_siam:0 "シャム"
