--- a/source/localisation/hedgehog_l_english.yml
+++ b/source/localisation/hedgehog_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
- THREE_FIRES_FEDERATION:0 "Three Fires Confederacy"
+ THREE_FIRES_FEDERATION:0 "三火連邦"
  SIO_FEDERATION:0 "偉大なるスーの国"
  iroquois_federation_name:0 "イロコイ連邦"
  huron_federation_name:0 "ヒューロン連邦"
@@ -7,23 +7,23 @@
  SIO_federation_name:0 "偉大なるスーの国"
  FEDERATION_ADVANCEMENTS_HEADER:0 "連邦の進歩"
  MUST_BE_FEDERATION_LEADER:0 "§R連邦の指導国でなければならない§!\n"
- COHESION_REQUIREMENT:0 "§RFederation needs $COHESION|Y$§! cohesion.\n"
+ COHESION_REQUIREMENT:0 "§R連邦には$COHESION|Y$の結束値が必要です。§!\n"
  CONFIRM_FEDERATION_ADVANCEMENT:0 "連邦の進歩を選択する"
- CONFIRM_FEDERATION_ADVANCEMENT_DESC:0 "Are you sure you want to enact the $NAME|Y$ advancement? It will have the following effect:\n$EFFECT$\n\n§RDoing this will lower your §YCohesion§! to §Y20§!!§!"
- DISBAND_FEDERATION_EFFECT:0 "$NAME|Y$は利用不可になるでしょう。\n"
- INTEGRATE_FEDERATION_MEMBERS:0 "全ての連邦加盟国は統合されるだろう。"
+ CONFIRM_FEDERATION_ADVANCEMENT_DESC:0 "$NAME|Y$の進歩を制定してもよろしいですか？これは以下の効果をもたらします：\n$EFFECT$\n\n§Rこれを行うと§Y結束力§!が§Y20§!に低下します！§!"
+ DISBAND_FEDERATION_EFFECT:0 "$NAME|Y$は利用不可になります。\n"
+ INTEGRATE_FEDERATION_MEMBERS:0 "全ての連邦加盟国が統合されます。"
  FORM_FEDERATION_NATION:0 ""
- NUM_LESS_FEDERATION_ADVANCEMENTS_TRIGGER:0 "Needs less than $NUM|Y$ federation advancements enacted."
- NUM_MORE_OR_EQUAL_FEDERATION_ADVANCEMENTS_TRIGGER:0 "Needs $NUM|Y$ or more federation advancements enacted."
- ANY_FEDERATION_MEMBER:0 "Any federation member:\n"
- ALL_FEDERATION_MEMBER:0 "All federation member:\n"
+ NUM_LESS_FEDERATION_ADVANCEMENTS_TRIGGER:0 "連邦の進歩を$NUM|Y$以上制定しないことが必要です。"
+ NUM_MORE_OR_EQUAL_FEDERATION_ADVANCEMENTS_TRIGGER:0 "連邦の進歩を$NUM|Y$以上制定する必要があります。"
+ ANY_FEDERATION_MEMBER:0 "いずれかの連邦加盟国：\n"
+ ALL_FEDERATION_MEMBER:0 "全ての連邦加盟国：\n"
  FEDERATION_SIZE_LESS_THAN:0 "Less than $SIZE|Y$ federation members.\n"
  FEDERATION_SIZE_MORE_THAN:0 "$SIZE|Y$以上の連邦加盟国がある。\n"
- ENABLE_FEDERATION_OFFENSIVE_WARS:0 "Enable Federation Offensive Wars\n"
- DISABLE_FEDERATION_OFFENSIVE_WARS:0 "Disable Federation Offensive Wars\n"
- MODIFIER_YEARLY_FEDERATION_FAVOR_GROWTH:0 "Yearly Federation Favor Growth"
- MODIFIER_MONTHLY_REFORM_PROGRESS_MODIFIER:0 "Monthly Reform Progress Modifier"
- TRIBAL_DEVELOPMENT_VALUE:0 "From Tribal Development: $VAL|Y0$"
+ ENABLE_FEDERATION_OFFENSIVE_WARS:0 "連邦の攻撃戦争を有効にする\n"
+ DISABLE_FEDERATION_OFFENSIVE_WARS:0 "連邦の攻撃戦争を無効にする\n"
+ MODIFIER_YEARLY_FEDERATION_FAVOR_GROWTH:0 "年間連邦好感度成長"
+ MODIFIER_MONTHLY_REFORM_PROGRESS_MODIFIER:0 "月間政府改革進捗度補正"
+ TRIBAL_DEVELOPMENT_VALUE:0 "部族発展度から：$VAL|Y0$"
  TRIBAL_DEVELOPMENT_INCREASE_EXPLANATION:0 "Random category will grow by $VAL|+$:\n"
  PROVINCE_SETTLE_TOOLTIP_DESC:0 "Will settle our people in the province making it belong to us fully and relocate $ADM|Y$£adm£, $DIP|Y$£dip£, $MIL|Y$£mil£ Development to it.\n\n"
  SETTLE_PROVINCE_COST:0 "$COST|Y$$POWER|$力コスト\n"
