--- a/source/localisation/manchu_l_english.yml
+++ b/source/localisation/manchu_l_english.yml
@@ -331,8 +331,8 @@
  desc_lost_control_of_beijing:0 "もし、中国の主要都市の一つである北京を保有できなければ、天命を請求する我々にとって、それは悪い前兆だ。"
  lost_control_of_nanjing:1 "中華皇帝が南京の領有も支配もしていない"
  desc_lost_control_of_nanjing:0 "もし、中国の主要都市の一つである南京を保有できなければ、天命を請求する我々にとって、それは悪い前兆だ。"
- lost_control_of_canton:1 "中華皇帝が広東の領有も支配もしていない"
- desc_lost_control_of_canton:0 "もし、中国の主要都市の一つである広東を保有できなければ、天命を請求する我々にとって、それは悪い前兆だ。"
+ lost_control_of_canton:1 "中華皇帝が広州の領有も支配もしていない"
+ desc_lost_control_of_canton:0 "もし、中国の主要都市の一つである広州を保有できなければ、天命を請求する我々にとって、それは悪い前兆だ。"
  humane_personality:0 "仁愛"
  desc_humane_personality:0 "この支配者は慈悲深い人です。慈悲や博愛、真っ直ぐな道徳価値への揺るぎない献身というのが我が支配者と全ての人々の関係の特徴となっています。"
  humane_personality_die_desc:0 "臣下たちは君主の慈悲と博愛を愛情をもって思い出すだろう。"
