--- a/source/localisation/prov_names_l_english.yml
+++ b/source/localisation/prov_names_l_english.yml
@@ -644,7 +644,7 @@
  PROV664:0 "凌雲"
  PROV665:0 "肇慶"
  PROV666:0 "瓊州"
- PROV667:0 "広東"
+ PROV667:0 "広州"
  PROV668:0 "マカオ"
  PROV669:0 "福州"
  PROV670:0 "贛州"
@@ -851,8 +851,8 @@
  PROV872:1 "Shayuusht'la"
  PROV873:1 "チヌーク"
  PROV874:1 "ドゥワミッシュ"
- PROV875:1 "Tachii'nii"
- PROV876:1 "Yavapé"
+ PROV875:1 "ターチーニー"
+ PROV876:1 "ヤヴァパイ"
  PROV877:1 "アカメル"
  PROV878:1 "Kinyaa'aanii"
  PROV879:1 "ディー"
@@ -880,11 +880,11 @@
  PROV901:1 "Tsawi"
  PROV902:1 "Niuachi"
  PROV903:0 "オマハ"
- PROV904:1 "Wahpetunwan"
+ PROV904:1 "ウォーペトンワン"
  PROV905:1 "Baxoje"
- PROV906:1 "Ithanktunwanna"
- PROV907:1 "Ithanktunwan"
- PROV908:1 "Sisithunwan"
+ PROV906:1 "ヤンクトナイ"
+ PROV907:1 "ヤンクトンワン"
+ PROV908:1 "シスストンワン"
  PROV909:1 "Nueta"
  PROV910:0 "マクア"
  PROV911:1 "Baawitigon"
@@ -940,11 +940,11 @@
  PROV961:1 "オンヨーターカ"
  PROV962:0 "ウナミ"
  PROV963:1 "Machkantowoon"
- PROV964:1 "Kanien'kehaka"
- PROV965:1 "Manahahttan"
+ PROV964:1 "カニエンケハカ"
+ PROV965:1 "マナハッタン"
  PROV966:0 "ニプマク"
  PROV967:0 "ナラガンセット"
- PROV968:1 "Massachusett"
+ PROV968:1 "マサチューセッツ"
  PROV969:1 "Mahican"
  PROV970:1 "Amoskeag"
  PROV971:1 "Penapawsket"
@@ -969,7 +969,7 @@
  PROV990:0 "メイソウナ"
  PROV991:1 "Odishkwaagamiig"
  PROV992:1 "Weskarini"
- PROV993:1 "Osheaga"
+ PROV993:1 "オシアガ"
  PROV994:0 "スタダコナ"
  PROV995:1 "Toutouskak"
  PROV996:1 "Oumamiwek"
@@ -2454,12 +2454,12 @@
  PROV2488:0 "パルース"
  PROV2489:1 "Boho'inee"
  PROV2490:1 "Kusiutta"
- PROV2491:1 "Hwalbay"
- PROV2492:1 "Bedonkohe"
- PROV2493:1 "Hopituh"
- PROV2494:1 "Shiwinna"
+ PROV2491:1 "ワラパイ"
+ PROV2492:1 "ベドンコヘ"
+ PROV2493:1 "ホピトゥ"
+ PROV2494:1 "シウィンナ"
  PROV2495:1 "アーク"
- PROV2496:1 "Saldindé"
+ PROV2496:1 "サーディンデ"
  PROV2497:1 "Tsès Sembai"
  PROV2498:1 "Tahuundé"
  PROV2499:0 "コアウィルテコ"
@@ -2473,14 +2473,14 @@
  PROV2507:0 "バチネンナ"
  PROV2508:0 "スキリ"
  PROV2509:0 "ウセッサ"
- PROV2510:1 "Hiraaca"
+ PROV2510:1 "ヒダーツァ"
  PROV2511:0 "イプシェバイン"
  PROV2512:0 "ワペクート"
  PROV2513:0 "モインウェーナ"
  PROV2514:1 "Mishigamaw"
  PROV2515:0 "サトスデン"
  PROV2516:0 "アダイ"
- PROV2517:1 "Bdewekhantunwan"
+ PROV2517:1 "ムデワカントンワン"
  PROV2518:0 "ノケ"
  PROV2519:0 "キラティカ"
  PROV2520:0 "メンコンキア"
@@ -2513,7 +2513,7 @@
  PROV2547:0 "ロアノーク"
  PROV2548:0 "トゥテーロ"
  PROV2549:0 "モラトク"
- PROV2550:1 "Rappahannock"
+ PROV2550:1 "ラッパハノック"
  PROV2551:1 "Calicula"
  PROV2552:0 "マナホアック"
  PROV2553:1 "Patawomac"
@@ -3708,7 +3708,7 @@
  PROV4629:1 "Ndawe Qoha"
  PROV4630:0 "ナタエンデ"
  PROV4631:1 "ナフラット"
- PROV4632:1 "Tsi'ya"
+ PROV4632:1 "ツィーヤ"
  PROV4633:0 "ソバイプリ"
  PROV4634:1 "Tsék'aadn"
  PROV4635:0 "タークタム"
