--- a/source/localisation/emperor_missions_l_english.yml
+++ b/source/localisation/emperor_missions_l_english.yml
@@ -1708,7 +1708,7 @@
  emp_brapru_conquer_silesia_desc:0 "シレジアに対する我々の主張がやや不安定であると言う者もいるが、我々はこの州を自身のものとして主張するいくつかの根拠を持っている。我が国の威信は、我々がそれらの主張を押し進めるかどうかにかかっている。"
  emp_brapru_prussia_partitions_poland_title:0 "大ポーランドの征服"
  emp_brapru_prussia_partitions_poland_desc:0 "ポーランドは弱く、ロシアは彼女を支配し続けたいと願っており、我々がこの状況を受け入れるには、ポーランドの土地で埋め合わせる必要がある。"
- emp_brapru_chinese_trade_title:0 "広東での交易"
+ emp_brapru_chinese_trade_title:0 "広州での交易"
  emp_brapru_chinese_trade_desc:0 "東洋の富はまだヨーロッパの商人によって開拓されていない。我々はこの富の新たな源泉を急いで利用しなければならない。キャセイへ向け出航だ！"
  emp_brapru_edict_of_potsdam_title:0 "ポツダム勅令"
  emp_brapru_edict_of_potsdam_desc:0 "ヨーロッパ中の政府は我々の信仰の兄弟たちを差別的に扱う法律を可決している。我々は、自身の信心深さを再確認し、信者に我々の国境内に定住するよう勧める我々自身の勅令を宣言する必要がある"
