--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -4830,10 +4830,10 @@
  flavor_nah.6.d:0 "A cloud of dust can be seen on the horizon this morning. Under this dim light, the day feels colder, although the sun still governs all the land. Soon after the sunrise, unsettling noises accompany the dust and human figures finally emerge from it. Our enmity with the Comanche tribes has pushed them to attack us in the search of captives."
  flavor_nah.6.a:0 "We are outnumbered!"
  flavor_nah.6.b:0 "They cannot compete with our army."
- flavor_pue.1.t:0 "The Ancient Ones"
- flavor_pue.1.d:0 "A name is an important element that should not be chosen without much thought. We have restored the primordial dwellings of our ancestors and taken back the land that they once held. We can now reclaim their name."
- flavor_pue.1.a:0 "We must honor our legacy."
- flavor_pue.1.b:0 "We shall keep our own name."
+ flavor_pue.1.t:0 "古代の人々"
+ flavor_pue.1.d:0 "名前は、あまり考えずに選んではいけない重要な要素です。私たち祖先の原初の住居を復元し、かつての領土を取り戻しました。今や、祖先の名も取り戻すことができます。"
+ flavor_pue.1.a:0 "その遺産、大切にせねばな。"
+ flavor_pue.1.b:0 "今の名のままにしようか。"
  flavor_pue.2.t:0 "プエブロ反乱の始まり"
  flavor_pue.2.d:0 "They arrived with the first sun, their pale faces turned almost red by its rays. At first, they tried to talk to us; then, we saw their metal weapons. Years have passed since that first encounter and our land has been attacked, misused and insulted. Our people have seen soldiers, missionaries and settlers come and go through their own houses. But now we have had enough.\nSome of our leaders have gained support from more than 40 of our villages and have waited, patiently, for the right moment to strike. Each morning they would untie a knot from a cord, and when the last one was to be untied, the fight should start.\nToday was that morning."
  flavor_pue.2.a:0 "We shall expel these invaders!"
