--- a/source/localisation/gecko_1_31_l_english.yml
+++ b/source/localisation/gecko_1_31_l_english.yml
@@ -1,9 +1,9 @@
 ﻿l_english:
- american_soil:0 "American Soil"
- cautious_preparation:0 "Cautious Preparation"
- signs_of_victory:0 "Signs of Victory"
- discoveries_revealed:0 "Discoveries Revealed"
- undisclosed_tactics:0 "Undisclosed Tactics"
- undiscovered_territory:0 "Undiscovered Territory"
+ american_soil:0 "アメリカの土壌"
+ cautious_preparation:0 "慎重な準備"
+ signs_of_victory:0 "勝利の兆し"
+ discoveries_revealed:0 "見えてきた発見の数々"
+ undisclosed_tactics:0 "非公開の戦略"
+ undiscovered_territory:0 "未発見の領域"
  TRIBAL_DEVELOPMENT_TITLE:0 "部族発展度"
  CLICK_MAP_TO_ADD_CARPETSIEGE_AREAS:0 "地図をクリックして絨毯占領地域を追加・削除します"
