--- a/source/localisation/native_rework_l_english.yml
+++ b/source/localisation/native_rework_l_english.yml
@@ -1,16 +1,16 @@
 ﻿l_english:
- DEVASTATION_FROM_MIGRATORY_TRIBE:1 "Tribal Grazing: $VAL|-2$\n"
- DEVELOPMENT_FROM_MIGRATORY_TRIBE:0 "Grazing in $PROV|Y$: $VAL|+2$\n"
+ DEVASTATION_FROM_MIGRATORY_TRIBE:1 "部族の牧草地：$VAL|-2$\n"
+ DEVELOPMENT_FROM_MIGRATORY_TRIBE:0 "$PROV|Y$の牧草地：$VAL|+2$\n"
  TRIBE_ADM_DEV:0 "$VAL|2$£adm£"
  TRIBE_DIP_DEV:0 "$VAL|2$£dip£"
  TRIBE_MIL_DEV:0 "$VAL|2$£mil£"
  CAN_NOT_EXPLOIT_MIGRATORY_TRIBE:0 "§R移住可能部族は州を搾取できません。§!"
  IMPPR_MIGRATORY_TRIBE:0 "§R移住可能部族は州を開発できません。§!"
- PROVINCE_TRIBAL_LAND:0 "The $OWNER|Y$ considers $PROV|Y$ part of their home."
- MIGRATE_PROVINCE_NOT_ADJECENT:0 "$PROV|Y$ is not adjecent to your tribe."
- MIGRATE_PROVINCE_SETTLED:0 "$PROV|Y$ is already settled by $OWNER|Y$."
+ PROVINCE_TRIBAL_LAND:0 "$OWNER|Y$は、$PROV|Y$を自分の家の一部と考えています。"
+ MIGRATE_PROVINCE_NOT_ADJECENT:0 "$PROV|Y$はあなたの部族に隣接していません。"
+ MIGRATE_PROVINCE_SETTLED:0 "$PROV|Y$は$OWNER|Y$が既に定住しています。"
  PROVINCE_MIGRATE_TOOLTIP:0 "$PROV|Y$への移住"
- MIGRATE_PROVINCE_NEED:0 "Need $COST|Y$ $POWER|$ Power to migrate.\n"
+ MIGRATE_PROVINCE_NEED:0 "移住には$COST|Y$$POWER|$が必要です。\n"
  MIGRATE_PROVINCE_COST:0 "$COST|Y$$POWER|$力コスト\n"
- CONFIRM_MIGRATE:0 "Confirm Migration"
- CONFIRM_MIGRATE_TEXT:0 "Do you want to migrate to $PROV|Y$?\n"
+ CONFIRM_MIGRATE:0 "移住の確認"
+ CONFIRM_MIGRATE_TEXT:0 "$PROV|Y$に移住したいですか？\n"
