--- a/source/localisation/popserror_l_english.yml
+++ b/source/localisation/popserror_l_english.yml
@@ -12,4 +12,4 @@
  POPS_parse-failure:0 "クライアント障害 (解析)"
  POPS_unsupported-account-details-keys:0 "クライアント障害 (サポートされていないキー)"
  POPS_invalid-script-code:0 "クライアント障害 (無効なスクリプト)"
- POPS_UNEXPECTED_ERROR:0 "Failed to sign in. Please check your internet conneciton and try again."
+ POPS_UNEXPECTED_ERROR:0 "サインインに失敗しました。インターネット接続を確認し、もう一度実行してみて下さい。"
